--- a/chars_book/战士系.html
+++ b/chars_book/战士系.html
@@ -68,10 +68,11 @@
       <nav role="navigation">
 
 <ul class="summary">
-<li class="chapter" data-level="1" data-path="index.html"><a href="index.html"><i class="fa fa-check"></i><b>1</b> 前言<span></span></a>
+<li class="chapter" data-level="1" data-path="index.html"><a href="index.html"><i class="fa fa-check"></i><b>1</b> 更新与简介<span></span></a>
 <ul>
 <li class="chapter" data-level="1.1" data-path="index.html"><a href="index.html#更新日志"><i class="fa fa-check"></i><b>1.1</b> 更新日志<span></span></a></li>
 <li class="chapter" data-level="1.2" data-path="index.html"><a href="index.html#更新预告"><i class="fa fa-check"></i><b>1.2</b> 更新预告<span></span></a></li>
+<li class="chapter" data-level="1.3" data-path="index.html"><a href="index.html#前言"><i class="fa fa-check"></i><b>1.3</b> 前言<span></span></a></li>
 </ul></li>
 <li class="chapter" data-level="2" data-path="术语与打法.html"><a href="术语与打法.html"><i class="fa fa-check"></i><b>2</b> 术语与打法<span></span></a>
 <ul>
@@ -160,6 +161,15 @@
 <li class="chapter" data-level="9.5" data-path="饿鲨.html"><a href="饿鲨.html#科技饿鲨"><i class="fa fa-check"></i><b>9.5</b> 科技饿鲨<span></span></a></li>
 <li class="chapter" data-level="9.6" data-path="饿鲨.html"><a href="饿鲨.html#爆破饿鲨"><i class="fa fa-check"></i><b>9.6</b> 爆破饿鲨<span></span></a></li>
 <li class="chapter" data-level="9.7" data-path="饿鲨.html"><a href="饿鲨.html#s-1000"><i class="fa fa-check"></i><b>9.7</b> S-1000<span></span></a></li>
+</ul></li>
+<li class="chapter" data-level="10" data-path="对战ai策略.html"><a href="对战ai策略.html"><i class="fa fa-check"></i><b>10</b> 对战AI策略<span></span></a>
+<ul>
+<li class="chapter" data-level="10.1" data-path="对战ai策略.html"><a href="对战ai策略.html#战术系-1"><i class="fa fa-check"></i><b>10.1</b> <img src="images/Tactician-small.png" style="height:0.6cm" />战术系<span></span></a></li>
+<li class="chapter" data-level="10.2" data-path="对战ai策略.html"><a href="对战ai策略.html#斗士系-1"><i class="fa fa-check"></i><b>10.2</b> <img src="images/Brawler-small.png" style="height:0.6cm" />斗士系<span></span></a></li>
+<li class="chapter" data-level="10.3" data-path="对战ai策略.html"><a href="对战ai策略.html#战士系-1"><i class="fa fa-check"></i><b>10.3</b> <img src="images/Warrior-small.png" style="height:0.6cm" />战士系<span></span></a></li>
+<li class="chapter" data-level="10.4" data-path="对战ai策略.html"><a href="对战ai策略.html#侦查系-1"><i class="fa fa-check"></i><b>10.4</b> <img src="images/Scout-small.png" style="height:0.6cm" />侦查系<span></span></a></li>
+<li class="chapter" data-level="10.5" data-path="对战ai策略.html"><a href="对战ai策略.html#科技系-1"><i class="fa fa-check"></i><b>10.5</b> <img src="images/Tech-small.png" style="height:0.6cm" />科技系<span></span></a></li>
+<li class="chapter" data-level="10.6" data-path="对战ai策略.html"><a href="对战ai策略.html#爆破系-1"><i class="fa fa-check"></i><b>10.6</b> <img src="images/Demolitions-small.png" style="height:0.6cm" />爆破系<span></span></a></li>
 </ul></li>
 </ul>
 
@@ -439,21 +449,34 @@
 <p>探长在电影中大腹便便的老兵造型十分硬汉，预告视频也几乎让人无限确认这将是一个与铁皮争夺爆破一哥的角色。然而……是战士！据Kabam说，孩之宝在角色的类别确定方面也有一定的话语权，想必这里面官方可能光是看到了电影中“Warrior”这个词，但没有考虑这个词在百炼为战中的定义和不一样。</p>
 <div id="能力-21" class="section level4 hasAnchor" number="5.6.1.1">
 <h4><span class="header-section-number">5.6.1.1</span> 能力<a href="战士系.html#能力-21" class="anchor-section" aria-label="Anchor link to header"></a></h4>
-<p>探长与惊破天、野牛一样需要进行远距离站防触发能力，站防0.9秒后切换两种弹药。</p>
+<p>（探长的能力经过数次调整，以下按最新的信息整理到一起）</p>
+<p>探长与惊破天、野牛一样需要进行远距离站防触发能力，站防<del>0.9</del>0.6秒后切换两种弹药。</p>
 <ul>
-<li>地狱弹在出暴击时100%施加燃烧，在被燃烧的对手身上打出的暴击增加50%伤害。</li>
-<li>精准弹提升远程暴击并且让风刃、黄豹和幻影的重击无法穿透</li>
-<li>重击后获得护甲并有50%概率降低对方暴击抗性，进一步提高出暴击的概率。</li>
-<li>S1配地狱弹时100%施加长时间燃烧，配精确弹时100%施加长时间暴击抗性降低。</li>
-<li>S2每一枪50%概率流血（这就是你是战士的原因？）</li>
-<li>S3获得护甲并施加28秒的暴击抗性降低</li>
+<li>地狱弹
+<ul>
+<li>在远程小枪出暴击时100%施加燃烧，30%的燃烧伤害，持续10秒。</li>
+<li>使用地狱弹打小枪连击的第三枪100%能刷新燃烧DOT。</li>
+</ul></li>
+<li>精准弹
+<ul>
+<li>顾名思义，精准弹提升远程暴击率30%。并且让风刃、黄豹和幻影的重击无法穿透，也不会因为黄豹的前冲打偏，不会触发阿尔茜、热破的远程规避，简单说：除了主动闪开，其余一律打中。</li>
+<li>当装备精准弹药侧闪的时候，能够净化掉蝎子的目眩效果。</li>
+<li>使用精准弹打小枪连击的第二枪有60%概率驱散一个护盾，第三枪80%概率。这两个加强小枪连击的调整是2021年4月30日改的，也是游戏中唯一一处强调远程三连击的地方，可见探长的玩法是多么与众不同。</li>
+</ul></li>
+<li>如果在被燃烧的对手身上打出暴击，增加50%伤害。</li>
+<li>重击后获得一个10%的护甲6秒，并有50%概率降低对方暴击抗性20%，持续6秒，进一步提高出暴击的概率。</li>
+<li>特殊技
+<ul>
+<li>S1配地狱弹时100%概率施加8秒强度为60%的燃烧伤害，配精准弹时100%概率施加一个20秒的降暴100%，也就是对手20秒内无法打出暴击。</li>
+<li>S2每一枪50%概率施加流血5秒，最后的手雷50%概率施加燃烧5秒。</li>
+<li>S3获得一个10%的护甲30秒，并降低对方暴击抗性40%。这个效果之前是持续28秒，但因为探长的S3动画很长，浪费了很多时间，后来改成了在S3之后，探长近战打中或者被近战打中对方的时候才开始20秒的倒计时。这同样是鼓励探长待在一边打远程小枪。</li>
+</ul></li>
 </ul>
-<p>可惜探长三个特殊技中，S2和S3的伤害都比较抱歉。</p>
-<p>探长独特的地方在于他远程小枪的输出甚至超过了拳头，这也让他的打法套路异于常人，操作学习难度高。小枪的低命中也让他很难快速结束战斗。自身的血量在战士中排名仅次于蝎子，配合护甲buff，有一定的持久性。</p>
+<p>探长独特的地方在于他远程小枪的输出甚至超过了拳头，这也让他的打法套路异于常人，也许是为了让玩家专注于小枪的命中，游戏给探长配了一个近战重击，操作难度高。小枪的低命中也让他很难快速结束战斗。自身的血量在战士中排名仅次于蝎子，配合护甲buff，有一定的持久性。</p>
 </div>
 <div id="招牌-20" class="section level4 hasAnchor" number="5.6.1.2">
 <h4><span class="header-section-number">5.6.1.2</span> 招牌<a href="战士系.html#招牌-20" class="anchor-section" aria-label="Anchor link to header"></a></h4>
-<p>在远程攻击即将击中时侧闪将触发滚动，并提升远程射速与伤害。要注意的是太早侧闪不会触发。高觉醒探长出招牌后三发小枪的伤害甚至能比肩S3。</p>
+<p>在远程攻击即将击中时侧闪将触发滚动，并提升远程射速与伤害，持续<del>3秒</del>5秒。搭配“枪手”精通，高觉醒探长出招牌后三发小枪的伤害甚至能比肩S3。但是实际用了用，这个招牌还真的蛮难触发的，早了肯定不行，但一味地等子弹到面前再闪也出不来，这就让行动方式跟平时有点不同。我认为这是练好探长的必由之路，就像练好天火必须学会招架一样。</p>
 </div>
 <div id="协同-20" class="section level4 hasAnchor" number="5.6.1.3">
 <h4><span class="header-section-number">5.6.1.3</span> 协同<a href="战士系.html#协同-20" class="anchor-section" aria-label="Anchor link to header"></a></h4>
@@ -461,37 +484,37 @@
 </div>
 <div id="短板-21" class="section level4 hasAnchor" number="5.6.1.4">
 <h4><span class="header-section-number">5.6.1.4</span> 短板<a href="战士系.html#短板-21" class="anchor-section" aria-label="Anchor link to header"></a></h4>
-<p>如前所述，探长的短板主要在于另类的输出方式。做为靠远程打输出的选手却配上了近战型的重击，自相矛盾。防御切换子弹虽然快，但被迫防御时也会触发，容易打乱部署。特殊技的输出则更是抱歉，S2热闹的一通猛射却打不出什么伤害（而且S2的子弹不会触发地狱弹和精准弹的效果）。S3给人的感觉更是在挠痒痒。这一切导致探长被公认为最需要加强的机器人之一，也进入了8.0预告的调整名单。</p>
-</div>
-<div id="调整-4" class="section level4 hasAnchor" number="5.6.1.5">
-<h4><span class="header-section-number">5.6.1.5</span> 8.0调整<a href="战士系.html#调整-4" class="anchor-section" aria-label="Anchor link to header"></a></h4>
-<p>探长获得了很多调整，但似乎目测没有实质性的改变：</p>
-<ul>
-<li>提升基础暴击率，缩短子弹切换时间。</li>
-<li>招牌：低觉醒的远程伤害提高（满觉醒不变）</li>
-<li>招牌触发后使用特殊攻击时冻结增益有效时间（与惊破天类似）。</li>
-<li>S2的手雷加燃烧而不是流血。</li>
-<li>地狱弹药的伤害和有效时间加大。</li>
-<li>当装备精准弹药侧闪的时候，能够净化掉蝎子的目眩效果。</li>
-</ul>
+<p>虽然卡邦在通过探长探索一种新的玩法，但远程小枪确实很难成为稳定的输出方式，首先只能连点3枪，又不能连点5枪再接特殊技，这跟近战连击相比回报还是低了，何况相比侧闪反击的成功率，远程相持稳定地打中子弹有多难，大家心里没有数吗？</p>
+<p>探长还有一个问题，因为切换子弹的速度被调整得很快了，实战中经常会一不小心多防御一会就切换了子弹。而探长大部分时间应该是挂着地狱弹来打燃烧的，所以有时还得主动切回去。</p>
+<!-- #### 8.0调整 -->
+<!-- 探长获得了很多调整，但似乎目测没有实质性的改变： -->
+<!-- - 提升基础暴击率，缩短子弹切换时间。 -->
+<!-- - 招牌：低觉醒的远程伤害提高（满觉醒不变） -->
+<!-- - 招牌触发后使用特殊攻击时冻结增益有效时间（与惊破天类似）。 -->
+<!-- - S2的手雷加燃烧而不是流血。 -->
+<!-- - 地狱弹药的伤害和有效时间加大。 -->
+<!-- - 当装备精准弹药侧闪的时候，能够净化掉蝎子的目眩效果。 -->
 </div>
 </div>
 <div id="推荐打法-21" class="section level3 hasAnchor" number="5.6.2">
 <h3><span class="header-section-number">5.6.2</span> 推荐打法<a href="战士系.html#推荐打法-21" class="anchor-section" aria-label="Anchor link to header"></a></h3>
-<p>小技巧：探长5连击用轻攻击结束是抽出枪打一发，这比中攻击要划算，因为这一发按远程小枪算。</p>
+<p>我并不觉得探长强，但毕竟这是人物解析，要站在人物设计的角度研究怎样把这个人物玩好，毕竟震天尊大部分人都会玩，但人人都只会玩天尊，那也太没意思了。</p>
+<p>我认为要练好探长，首先要找到办法合理地使用小枪，而不是完全放弃近战只练小枪。首先有个小技巧：探长近战5连击<strong>用轻攻击结束</strong>是抽出枪打一发，这比中攻击要划算，因为这一发按远程小枪命中算，实测也确实可以打出燃烧来。也就是说任何一次命中的近战连击都能保证一发小枪。</p>
+<p>接下来就算你已经能在对枪的时候找到对方的空档来一梭子，要提升伤害还取决于是否暴击。这时，重击施加的降暴抗可以帮到你。地狱弹打出暴击就施加长时间的燃烧，之后如果能连续打中三连枪是可以刷新燃烧的，这是一条加大伤害的途径。而且经实测，<strong>“打中”包括防御！</strong>也就是说对方有燃烧的状态下，对方只要不闪你的三枪，一定就刷新了。同理，精准弹的三枪里有两枪能拆盾，这让探长在对付犀牛的时候更安全。有了这个策略，练好探长的招牌滚动就显得更加重要，因为如果你能滚动闪开对方的两枪并还击，那个射速让电脑至少要防。</p>
 <p>由于探长主要要靠小枪打输出，所以能量积攒得相应要慢一些，所以无论是短还是长战斗，探长都应该主要围绕S1去开发自身两种子弹的额外性能。</p>
 <div id="短战斗-20" class="section level4 hasAnchor" number="5.6.2.1">
 <h4><span class="header-section-number">5.6.2.1</span> 短战斗<a href="战士系.html#短战斗-20" class="anchor-section" aria-label="Anchor link to header"></a></h4>
-<p>先切换到精准弹，远程牵制找空档命中小枪，积攒到S1后打出降暴抗再切换到地狱弹去打燃烧。</p>
+<p>不用一上来就玩远程，近战用轻攻击也有机会打出燃烧，一旦燃烧，找机会用小枪刷新。如果对方防住近战，用重击争取降暴抗。短战斗不用追求触发招牌。</p>
 </div>
 <div id="长战斗-20" class="section level4 hasAnchor" number="5.6.2.2">
 <h4><span class="header-section-number">5.6.2.2</span> 长战斗<a href="战士系.html#长战斗-20" class="anchor-section" aria-label="Anchor link to header"></a></h4>
-<p>先上S3降暴抗之后围绕S1和地狱弹打输出。侧闪小枪时机把握好，触发招牌后小枪命中才会更高。有射速提升的时候，预判对手侧闪时晚一点两枪连点（类似阿尔茜和幻影S1之后的战术），对方铁定中第二枪。</p>
+<p>好吧，你已经决定用探长打长战斗了，恭喜。</p>
+<p>先上S3降暴抗之后围绕S1和地狱弹打输出。侧闪小枪时机把握好，触发招牌后小枪命中才会更高。招牌出来时，预判对手侧闪时点枪打时间差（类似阿尔茜和幻影S1之后的战术），命中率会大大提高。</p>
 </div>
 </div>
 <div id="基地防守-21" class="section level3 hasAnchor" number="5.6.3">
 <h3><span class="header-section-number">5.6.3</span> 基地防守<a href="战士系.html#基地防守-21" class="anchor-section" aria-label="Anchor link to header"></a></h3>
-<p>探长是小枪型的角色，激光是他的最佳选择。</p>
+<p>探长是小枪型的角色，激光是他的最佳选择。EMI也不错，让探长的远程优势更大。</p>
 <!--/Note-->
 </div>
 </div>
@@ -508,22 +531,22 @@
 <p>蝎子的血量在战士系高居榜首，在全游戏中也仅次于6个斗士、震天尊与爆威，排名第9。</p>
 <ul>
 <li>毒液充能：一格气后获得一层毒液（经测试，最多堆10层）。蝎子的毒液可谓稳赚不赔的买卖，因为留在自己身上可加攻，一层就20%，如果觉醒，还回血。通过重击或者S2施加到对手身上成为12秒逆火，对方要么出特殊吃伤害，要么不出特殊，2层逆火过期会晕3秒，3层以上逆火过期吃500%的震击伤害。</li>
-<li>S1和S3施加目眩，造成对方远程普攻60%概率打不中，远程特殊100%打不中。控制远程特殊技很恐怖的警车简直是太爽。</li>
+<li>S1和S3施加目眩，造成对方远程普攻60%概率打不中，远程特殊100%打不中。控制远程特殊技很恐怖的警车<a href="#fn3" class="footnote-ref" id="fnref3"><sup>3</sup></a>简直是太爽。</li>
 <li>作为战士，近战暴击30~40%的概率流血，强度40到60%，时间4秒。可谓中规中矩。</li>
 </ul>
 </div>
 <div id="招牌-21" class="section level4 hasAnchor" number="5.7.1.2">
 <h4><span class="header-section-number">5.7.1.2</span> 招牌<a href="战士系.html#招牌-21" class="anchor-section" aria-label="Anchor link to header"></a></h4>
 <p>身上有毒液充能时，受到普通攻击会回血一定比例，受到的伤害（5级34.6%，满觉醒86%），这可以理解为提升了续航，也可以理解为减少了对方的攻击力。在面对巨蝎对手的时候，要注意使用特殊技杀伤大、有DOT的角色。另外因为防御伤害不回血，所以普攻打在防御的蝎子身上最好打满4下。</p>
-<p>觉醒的巨蝎配备科技控制台的时候，由于模块的加持会让巨蝎的回血进一步提升甚至抵消了伤害，这时建议使用黄豹、震荡波这种又可以阻止修复又有DOT的角色，否则真的是几分钟都打不完一局突袭。</p>
+<p>觉醒的巨蝎配备科技控制台的时候，由于模块的加持会让巨蝎的回血进一步提升甚至抵消了伤害，这时建议使用黄豹、震荡波这种又可以阻止修复又有DOT的角色，否则真的是几分钟都打不完一局突袭（只有特殊技才能下血）。</p>
 </div>
 <div id="协同-21" class="section level4 hasAnchor" number="5.7.1.3">
 <h4><span class="header-section-number">5.7.1.3</span> 协同<a href="战士系.html#协同-21" class="anchor-section" aria-label="Anchor link to header"></a></h4>
-<p>蝎子收到的协同主要也只是野兽净化和野牛提供的野兽祖先破防，但这两个协同都必须重击，后面会提到蝎子的打法要减少重击的使用。</p>
+<p>蝎子收到的协同主要是野兽净化和野牛提供的野兽祖先（破防），但这两个协同都必须重击，后面会提到蝎子的打法要减少重击的使用。</p>
 </div>
 <div id="短板-22" class="section level4 hasAnchor" number="5.7.1.4">
 <h4><span class="header-section-number">5.7.1.4</span> 短板<a href="战士系.html#短板-22" class="anchor-section" aria-label="Anchor link to header"></a></h4>
-<p>蝎子没有明显的短板，不想费脑也可以靠高命中的重击和性能优良的特殊技来解决战斗。非要说有什么短板，那就是毒液的保留让他的打法略微有点反常。</p>
+<p>蝎子设计得非常合理，玩家用和电脑用都强，硬要说短板，那就是围绕毒液做文章让他的打法略微有点反常。</p>
 </div>
 </div>
 <div id="推荐打法-22" class="section level3 hasAnchor" number="5.7.2">
@@ -531,12 +554,14 @@
 <p>蝎子的S1/S3技性能相同，S2和重击性能相同，正好演化出了两种不同的打法。</p>
 <div id="短战斗-21" class="section level4 hasAnchor" number="5.7.2.1">
 <h4><span class="header-section-number">5.7.2.1</span> 短战斗<a href="战士系.html#短战斗-21" class="anchor-section" aria-label="Anchor link to header"></a></h4>
-<p>短战斗时选择毒液给对方，使用近战缠斗配合高命中的重击和S2来解决战斗。</p>
+<p>短战斗时选择毒液给对方，围绕高命中的重击展开近战缠斗，特殊技也用S2，让对方吃逆火伤害。</p>
 </div>
 <div id="长战斗-21" class="section level4 hasAnchor" number="5.7.2.2">
 <h4><span class="header-section-number">5.7.2.2</span> 长战斗<a href="战士系.html#长战斗-21" class="anchor-section" aria-label="Anchor link to header"></a></h4>
-<p>长战斗时选择毒液给自己，初期坚决不放重击，围绕S1和S3打输出并控制对方远程攻击。等到第一个S3集满，毒液达到3层的时候可以有一种变化，争取先骗掉对方特殊技之后用重击施加三层逆火后用远程牵制来拖延时间，这时对方没有大招，只能眼巴巴看着逆火过期，就算牵制不当给对方得到了气槽，也可以放出S3，用漫长的动画时间进一步拖延时间。我们可以比较一下：带着五阶蝎子三层逆火放大招会造成420%的伤害，不放大招会有500%的震击，所以从蝎子的角度讲当然是拖延时间比较好，但就算放了，逆火伤害也很可观。</p>
-<p>如果对方有防震击手段（觉醒猩猩，反冲等），就不需要上述变化，一直把毒液堆到10层，用200%的攻击加成打架，战斗时间也会大大缩短。</p>
+<p>长战斗时选择毒液给自己。</p>
+<p>打法一适合有防震击手段的敌人（觉醒猩猩，反冲等）或者血厚但没护甲、抗性的敌人。战术是只用S1，不放重击，一路把毒液堆到10层，用200%的攻击加成打架，输出是有保障的。</p>
+<p>打法二适用于比较难啃的硬骨头，他们因为有护甲、抗性或者护盾，需要施加一定DOT或者逆火伤害来保证输出。初期还是坚决不放重击也不放S1，直接等到第一个S3集满，毒液达到3层。</p>
+<p>现在先骗掉对方特殊技之后，放重击施加三层逆火。我们这时比较一下：五阶蝎子三层逆火挂上去，对方放大招会造成420%的伤害，不放大招会有500%的震击，所以从蝎子的角度讲当然是拖延时间比较好。所以这时就拖延时间，不给对方满一格气的机会，等到震击出来再正常打。如果对方还是得到了气槽（比方他会自己充气），那就这时放出S3，用漫长的动画进一步拖延时间。当然，实在对方要放S技吃逆火也是巨疼的伤害。蝎子的毒上只要了三层，回报就是这么稳<a href="#fn4" class="footnote-ref" id="fnref4"><sup>4</sup></a>。</p>
 </div>
 </div>
 <div id="基地防守-22" class="section level3 hasAnchor" number="5.7.3">
@@ -552,14 +577,14 @@
 <!--Note-->
 <div id="特点分析-23" class="section level3 hasAnchor" number="5.8.1">
 <h3><span class="header-section-number">5.8.1</span> 特点分析<a href="战士系.html#特点分析-23" class="anchor-section" aria-label="Anchor link to header"></a></h3>
-<p>在言之凿凿表示“不会再有新机器人”之后，坊间盛传Kabam失去了孩之宝的变形金刚人物授权。然而游戏接近3周年庆之前Kabam发布了塞伯坦传奇3，奖励中出现“泰坦货币”（好吧，官方翻译是巨人货币），它的作用在8.4版更新后揭示出来——与千呼万唤始上架的五星震天尊一同上架到泰坦货币商店（标价24万）的还有百炼为战游戏原创人物——亡灵天尊！</p>
-<p>最初普通认为他和惊天雷、暗黑擎天柱一样是标准震天尊重涂，事实上两者除了S3相同外，差距非常大。亡灵天尊的重击是狂飙的近战重击，5连的动作仅部分与震天尊相似，S1与其说有震天尊S1的样子，不如说是野牛S1的飞全屏版（并且S1很难完美闪掉），S2是犀牛的动作。</p>
+<p>在言之凿凿表示“不会再有新机器人”之后，游戏接近3周年庆之前Kabam发布了塞伯坦传奇3，奖励中出现“泰坦货币”（好吧，官方翻译是巨人货币），它的作用在8.4版更新后揭示出来——与千呼万唤始上架的五星震天尊一同上架到泰坦货币商店（标价24万）的还有百炼为战游戏原创人物——亡灵天尊！</p>
+<p>最初普通认为他和惊天雷、暗黑擎天柱一样是标准震天尊重涂，事实上两者除了S3相同外，差距非常大。亡灵天尊的重击是狂飙的动作，5连的动作仅部分与震天尊相似，S1与其说有震天尊S1的样子，不如说是野牛S1的飞全屏版（并且S1很难完美闪掉），S2是犀牛的动作。也是从他开始，后续发布的角色虽然是“重涂”，但是都有一定程度的修改。</p>
 <div id="能力-23" class="section level4 hasAnchor" number="5.8.1.1">
 <h4><span class="header-section-number">5.8.1.1</span> 能力<a href="战士系.html#能力-23" class="anchor-section" aria-label="Anchor link to header"></a></h4>
 <ul>
 <li>完成一套连击，对手规避概率减少20%，作为战士，对侦查系有一定的克制。</li>
 <li>对手能量比自己多时，降对手能量功率20%。正常开局打对方一套连击，我方得到的怒气是少于对方的，但是亡灵天尊打一套，基本上双方的气相同。这是一种动态控气的设定。</li>
-<li>生命降到10%以下时，亡天尊推开对手并获得2格能量。10秒内全身起火，点燃身边的对手。相比震天尊，这个技能显得没有那么神奇，第一这10秒不是完全不死状态，第二这2格能量不是瞬间获得，所以玩家自己用的时候不要太指望，面对电脑到10%的时候如果不能马上控气，就“顶着熊熊烈火”上去尽快结束战斗吧。有逆火的角色在这个时候施加上逆火，对方的亡灵天尊充到S3后很可能就自杀了。</li>
+<li>生命降到10%以下时，亡天尊推开对手并获得2格能量。10秒内全身起火，点燃身边的对手。相比震天尊，这个技能显得没有那么神奇，第一这10秒不是完全不死状态，第二这2格能量不是瞬间获得，所以玩家自己用的时候不要太指望。</li>
 <li>泰坦充能
 <ul>
 <li>打中对手加1层充能，觉醒前最多20层；得到一格能量，加5层充能；每层充能加0.5 ~ 1.5%的攻击。</li>
@@ -609,18 +634,7 @@
 </div>
 <div id="故事boss策略" class="section level3 hasAnchor" number="5.8.4">
 <h3><span class="header-section-number">5.8.4</span> 故事Boss策略<a href="战士系.html#故事boss策略" class="anchor-section" aria-label="Anchor link to header"></a></h3>
-<p>故事模式第四幕最终Boss是亡灵天尊，但是这个亡灵天尊和之前故事的那个震天尊Boss一样，有几个阶段的遗迹和几个模块加持，让他非常变态。</p>
-<ul>
-<li>重击格挡模块，使得所有重击无效。这个模块虽然让很多靠重击命中吃饭的角色完全上不了场，但也可以像打盟战Boss的亡灵天尊一样，快速让他从S1跳到S2，因为S1比较难闪（当然，S2一旦没有闪好，轻则被磨血，重则秒杀）</li>
-<li>免疫基础远程攻击，这也让亡灵的血槽变相地增加了很多</li>
-<li>僵尸复活：只能靠特殊技打死。很多人没有注意到他有这个能力（查看模块的时候看不到，要展开敌人能力详情的时候在最底下才能看到），被坑了一次又一次</li>
-<li>他几个阶段的遗迹中，主要烦人的有两个：1、点燃自己并快速获得两格气，这使得如果你不能快速控气/锁气的话，基本上稳吃一个S3；2、疲劳：闪躲5次就会晕。这使得你不能自由地闪躲，有时只能乖乖地防御，错失很多进攻的机会。</li>
-</ul>
-<p>最早故事模式第四章出来的时候，作为老玩家，我带着5个双满，一通乱打便过了，那时只是注意到了僵尸复活后及时反应过来，用特殊技搞定了它。后来朋友说打不过，我上他的号发现没有一只双满，本以为也不难，结果打了10次才打过。才把策略写下来方便大家分析。</p>
-<p>首先亡灵自身对敌方能量的控制是长期的，你会发现气来得特别慢，那些靠S2打输出的角色，很可能到死了都上不来一招特殊技。其次亡灵是100觉醒的，暴击伤害巨大，一个战力9000左右的机器人吃上一套近战暴击基本上就残了。我队伍中有一个战力8000的斗擎，基本上每次都在招牌血量之外就被他一拳秒掉，连真男人都没机会用。再加上重击打不了，远程无伤害，我发现在前期基本上就只有靠侧闪反击的近战小拳拳来打伤害，甚至对方防住也要多打打防御伤害（像大黄蜂这种能打6下近战防御伤害磨血的挺有用）。</p>
-<p>另外这个亡灵的AI是打五拳就跑的（类似传奇3），所以吃了亏你还没法及时还手。前期可能是有什么减伤的效果，铁皮S2出招牌也打不下10%的血。但是中间换遗迹之后，亡灵的抵抗力下降，这时需要找机会输出。建议在半血之前上近战型的角色如战擎、斗擎、汽车大师等。</p>
-<p>如果中途有角色被KO，他又即将进入疯狂加气的遗迹时，除非你有犀牛这样能锁住气的，否则就上一个炮灰一点的角色，因为吃一个S3基本上必死。</p>
-<p>最关键的就是亡灵进入残血阶段的时候，因为这时有两个因素是矛盾的：疲劳模块让人只能减少闪躲，不然被晕在原地的话亡灵会迅速灭掉你。但是不闪躲的话找不到空档打反击，自己气来得慢没法攒出S技。没有S技的话打不死，一旦用普攻打倒，亡灵起来就恢复16%的血……如此循环谁扛得住？所以我的建议是搞到亡灵残血之后再上警车、震天尊这种自己来气的，死死退在一边攒气。</p>
+<p>此部分内容搬运到<a href="#Boss版亡灵天尊策略">这里</a>。</p>
 <!--/Note-->
 </div>
 </div>
@@ -681,6 +695,13 @@
 
 </div>
 </div>
+</div>
+<div class="footnotes">
+<hr />
+<ol start="3">
+<li id="fn3"><p>可见警车的特殊技虽然是用近战的方式躲，依然是判定为远程攻击的<a href="战士系.html#fnref3" class="footnote-back">↩︎</a></p></li>
+<li id="fn4"><p>只怕惊天雷<a href="战士系.html#fnref4" class="footnote-back">↩︎</a></p></li>
+</ol>
 </div>
             </section>
 
