--- a/chars_book/斗士系.html
+++ b/chars_book/斗士系.html
@@ -68,10 +68,11 @@
       <nav role="navigation">
 
 <ul class="summary">
-<li class="chapter" data-level="1" data-path="index.html"><a href="index.html"><i class="fa fa-check"></i><b>1</b> 前言<span></span></a>
+<li class="chapter" data-level="1" data-path="index.html"><a href="index.html"><i class="fa fa-check"></i><b>1</b> 更新与简介<span></span></a>
 <ul>
 <li class="chapter" data-level="1.1" data-path="index.html"><a href="index.html#更新日志"><i class="fa fa-check"></i><b>1.1</b> 更新日志<span></span></a></li>
 <li class="chapter" data-level="1.2" data-path="index.html"><a href="index.html#更新预告"><i class="fa fa-check"></i><b>1.2</b> 更新预告<span></span></a></li>
+<li class="chapter" data-level="1.3" data-path="index.html"><a href="index.html#前言"><i class="fa fa-check"></i><b>1.3</b> 前言<span></span></a></li>
 </ul></li>
 <li class="chapter" data-level="2" data-path="术语与打法.html"><a href="术语与打法.html"><i class="fa fa-check"></i><b>2</b> 术语与打法<span></span></a>
 <ul>
@@ -160,6 +161,15 @@
 <li class="chapter" data-level="9.5" data-path="饿鲨.html"><a href="饿鲨.html#科技饿鲨"><i class="fa fa-check"></i><b>9.5</b> 科技饿鲨<span></span></a></li>
 <li class="chapter" data-level="9.6" data-path="饿鲨.html"><a href="饿鲨.html#爆破饿鲨"><i class="fa fa-check"></i><b>9.6</b> 爆破饿鲨<span></span></a></li>
 <li class="chapter" data-level="9.7" data-path="饿鲨.html"><a href="饿鲨.html#s-1000"><i class="fa fa-check"></i><b>9.7</b> S-1000<span></span></a></li>
+</ul></li>
+<li class="chapter" data-level="10" data-path="对战ai策略.html"><a href="对战ai策略.html"><i class="fa fa-check"></i><b>10</b> 对战AI策略<span></span></a>
+<ul>
+<li class="chapter" data-level="10.1" data-path="对战ai策略.html"><a href="对战ai策略.html#战术系-1"><i class="fa fa-check"></i><b>10.1</b> <img src="images/Tactician-small.png" style="height:0.6cm" />战术系<span></span></a></li>
+<li class="chapter" data-level="10.2" data-path="对战ai策略.html"><a href="对战ai策略.html#斗士系-1"><i class="fa fa-check"></i><b>10.2</b> <img src="images/Brawler-small.png" style="height:0.6cm" />斗士系<span></span></a></li>
+<li class="chapter" data-level="10.3" data-path="对战ai策略.html"><a href="对战ai策略.html#战士系-1"><i class="fa fa-check"></i><b>10.3</b> <img src="images/Warrior-small.png" style="height:0.6cm" />战士系<span></span></a></li>
+<li class="chapter" data-level="10.4" data-path="对战ai策略.html"><a href="对战ai策略.html#侦查系-1"><i class="fa fa-check"></i><b>10.4</b> <img src="images/Scout-small.png" style="height:0.6cm" />侦查系<span></span></a></li>
+<li class="chapter" data-level="10.5" data-path="对战ai策略.html"><a href="对战ai策略.html#科技系-1"><i class="fa fa-check"></i><b>10.5</b> <img src="images/Tech-small.png" style="height:0.6cm" />科技系<span></span></a></li>
+<li class="chapter" data-level="10.6" data-path="对战ai策略.html"><a href="对战ai策略.html#爆破系-1"><i class="fa fa-check"></i><b>10.6</b> <img src="images/Demolitions-small.png" style="height:0.6cm" />爆破系<span></span></a></li>
 </ul></li>
 </ul>
 
@@ -294,9 +304,9 @@
 <div id="能力-10" class="section level4 hasAnchor" number="4.3.1.1">
 <h4><span class="header-section-number">4.3.1.1</span> 能力<a href="斗士系.html#能力-10" class="anchor-section" aria-label="Anchor link to header"></a></h4>
 <ul>
-<li>前冲时的不可阻挡，令其在打法上极具侵略性。早期的汽车大师前冲都不可阻挡时间长，即使被侧闪也不会马上遭到反击，后来官方对此进行了削弱，使得面对电脑操作的汽车大师，侧闪反击套路更容易。但是在玩家手上并没有受到太大影响。</li>
+<li>前冲时的不可阻挡，令其在打法上极具侵略性。早期的汽车大师前冲都不可阻挡时间长，即使被侧闪也不会马上遭到反击，后来官方对此进行了削弱，使得面对电脑操作的汽车大师，侧闪反击套路更容易。这项调整对玩家的汽车大师也有一定的影响：重击撞倒后前冲压起身不像其他角色那么灵，电脑很容易闪开。</li>
 <li>重击会随机施加一种减益（破甲、降能量功率、减攻），能进一步扩大汽车大师在战斗中的优势。</li>
-<li>S1是游戏中少数几个只有输出没有效果的特殊技，所以基本上无用。</li>
+<li>S1是游戏中少数几个只有输出没有效果的特殊技，所以除了有时在需要能量型攻击的场合打打输出，基本上无用。</li>
 <li>S2之后长时间的霸体可以对对方形成极大的威慑力，杀伤也很高。</li>
 <li>S3虽然杀伤力极大并且施加6个减益，但由于自身也扣血，所以不推荐使用。</li>
 </ul>
@@ -489,7 +499,7 @@
 <!--Note-->
 <div id="特点分析-14" class="section level3 hasAnchor" number="4.7.1">
 <h3><span class="header-section-number">4.7.1</span> 特点分析<a href="斗士系.html#特点分析-14" class="anchor-section" aria-label="Anchor link to header"></a></h3>
-<p>在官方宣布“不再发布新机器人”时，坊间盛传Kabam失去了孩之宝的版权。没想到在2019年4月的二周年庆时，Kabam发布了新的挑战任务（地图与之前小黄蜂发布时的相同），并且Boss是惊天雷不说，完成任意难度的挑战都能获得惊天雷（2~4星）。</p>
+<p>在官方宣布“不再发布新机器人”时，坊间盛传Kabam失去了孩之宝的版权<a href="#fn1" class="footnote-ref" id="fnref1"><sup>1</sup></a>。没想到在2019年4月的二周年庆时，Kabam发布了新的挑战任务（地图与之前小黄蜂发布时的相同），并且Boss是惊天雷不说，完成任意难度的挑战都能获得惊天雷（2~4星）。</p>
 <p>虽然惊天雷是斗士让人有点费解，但是这个“红蜘蛛重涂”自一登场就让人觉得有点霸气外露。</p>
 <p>在泰坦货币商店中惊天雷的价格是17万。</p>
 <div id="能力-14" class="section level4 hasAnchor" number="4.7.1.1">
@@ -570,7 +580,7 @@
 <li>铁皮受到攻击时有30%的概率获得一层2-12%的护甲增益，持续10秒。（这里的“受到攻击”不一定要是挨打，防御和最后时刻闪避都算受到攻击，类似猩猩获得护甲的机制）</li>
 <li>每次新获得一层护甲，就有75%的概率得到8秒的攻击增益（9-20%），攻防同时提升，非常彪悍</li>
 <li>中等连击最后一击会刷新所有护甲增益的过期时间，此时如果铁皮身上的护甲不足五层，则获得2%的护甲一层，持续10秒。——看到这里是不是有一种感觉：这老家伙不是身披一堆护甲，就是在给自己加上护甲的路上？在实战中确实如此，如果你手残，电脑一套连击就很可能给你套上两三层护甲，如果你水平高，近战少打几下，快点用中攻击结束，可以轻松保持比较多的护甲数量。</li>
-<li>按住防御1.5秒会触发减益净化，用一个护甲净化一层减益。技能描述中没有明确何种类型的减益，经实测连蝎子的毒药也可以净化，这让铁皮的适用范围变得很大。但是——在实测中发现，他按住站防时只要对手过来摸一下或者远距离点一枪，净化的倒计时就没了！换句话说，你不但要防，对手还得乖乖在一边看着，才能净化。其他几个站防触发效果的角色（天火、野牛、探长）都是无视对方攻击的（除非被重击击倒），所以这个如果不改的话，铁皮这个技能基本上没用。</li>
+<li>按住防御1.5秒会触发减益净化，用一个护甲净化一层减益。技能描述中没有明确何种类型的减益，经实测连蝎子的毒药也可以净化，这让铁皮的适用范围变得很大。但是——在实测中发现，<strong>他按住站防时只要对手过来摸一下或者远距离点一枪，净化的倒计时就没了！换句话说，你不但要防，对手还得乖乖在一边看着，才能净化！</strong>其他几个站防触发效果的角色（天火、野牛、探长）都是无视对方攻击的（除非被重击击倒），所以这个如果不改的话，铁皮这个技能基本上没用。</li>
 <li>铁皮身上每层护甲会给他的特殊技加10%的概率打晕3秒，只要定期刷新护甲，在特殊技的时候30-50%的晕点概率还是比较稳的。不过如果打晕的话就会丢失5层护甲。</li>
 </ul></li>
 <li>重击平时没有什么特别效应，但是对方如果晕了的话伤害加200%，所以一旦打晕，对方气已经比较多，马上怼一发重击就够了，如果气不多，可以两枪后前冲<strong>2连击</strong>后重击，这时对方还没醒，重击一定能命中，比较超值。实测过，再多打对方就醒了，如果同时也是你是救护车或者喷气机的重度使用者，建议把昏迷精通点满，这样晕的时间更长。</li>
@@ -578,13 +588,13 @@
 <p>作为斗士，护甲让铁皮自身的坦度提升不少。而铁皮对护甲的运用则额外给了他加攻、净化和击晕的多元化能力。要对付电脑的铁皮，破甲依然是关键，而且电脑越挨打护甲层数越多，没有通天晓这样一破到底的还真难保证输出。</p>
 <ul>
 <li>S1：获得20-35%的近战增益，持续8秒。</li>
-<li>S2：连放三炮，前两炮有点像警车的散弹枪，然后出7秒霸体。霸体结束后获得三层护甲，持续10秒。比汽车大师那种一抬脚就出霸体浪费时间要实用很多。</li>
+<li>S2：连放三炮，前两炮有点像警车的散弹枪（但是实测并没有警车那种飞全屏的射程），然后出7秒霸体（<strong>注意：没打中是不会出霸体的，所以对玩家是个利好</strong>）。霸体结束后获得三层护甲，持续10秒。比汽车大师那种一抬脚就出霸体浪费时间要实用很多。</li>
 <li>S3：同救护车S3动画。刷新所有护甲，并且在剩余战斗中降低对方减益效果10%，可以堆4层。目前想不出有什么特别合适的应用场合。</li>
 </ul>
 </div>
 <div id="招牌-14" class="section level4 hasAnchor" number="4.8.1.2">
 <h4><span class="header-section-number">4.8.1.2</span> 招牌<a href="斗士系.html#招牌-14" class="anchor-section" aria-label="Anchor link to header"></a></h4>
-<p>在血量降到75%，50%和25%的时候，铁皮获得近战反伤的能力7.5秒。此时敌人每一次近战打击铁皮，铁皮有概率（16-90%）对敌人造成75%的伤害。和犀牛，碎骨魔的反伤不同，铁皮的反伤不是DOT而是直接伤害，不能被净化。从设计上看这是又一个电脑受益巨大的招牌，毕竟玩家要高觉醒不容易，而玩家挨打也少，不可能到了3个血量档位就开始主动挨打。而电脑……比方说盟战高难度，攻击力巨大，再配一个计时类的模块，不允许玩家到了3个血量档位时耐心等7.5秒，那就比较麻烦了。</p>
+<p>在血量降到75%，50%和25%的时候，铁皮获得近战反伤的能力7.5秒。此时敌人每一次近战打击铁皮，铁皮有概率（16-90%）对敌人造成75%的伤害。和犀牛，碎骨魔的反伤不同，铁皮的反伤不是DOT而是直接伤害，不能被净化。从设计上看这是又一个电脑受益巨大的招牌，毕竟玩家要高觉醒不容易，而玩家挨打也少，不可能到了3个血量档位就开始主动挨打。而电脑……比方说盟战高难度，攻击力巨大，再配一个计时类的模块，不允许玩家到了3个血量档位时耐心等7.5秒，那就比较麻烦了<a href="#fn2" class="footnote-ref" id="fnref2"><sup>2</sup></a>。</p>
 </div>
 <div id="协同-14" class="section level4 hasAnchor" number="4.8.1.3">
 <h4><span class="header-section-number">4.8.1.3</span> 协同<a href="斗士系.html#协同-14" class="anchor-section" aria-label="Anchor link to header"></a></h4>
@@ -617,6 +627,13 @@
 
 </div>
 </div>
+</div>
+<div class="footnotes">
+<hr />
+<ol start="1">
+<li id="fn1"><p>我也多次提到了这个消息，传来传去，加上卡邦很长时间都没怎么投入开发百炼，以至于很多人都信了。事实上，就算是出一个重涂的角色也是需要版权的。直到2022年出了G1铁皮和补天士，也推翻了“没版权，所以只能出重涂”这个说法<a href="斗士系.html#fnref1" class="footnote-back">↩︎</a></p></li>
+<li id="fn2"><p>事实上2022年4月14日上线的特殊任务里面的铁皮带了修复计时模块，配合他厚厚的护甲，反复修复到血量档位以上，反复触发招牌，让人非常头疼。<a href="斗士系.html#fnref2" class="footnote-back">↩︎</a></p></li>
+</ol>
 </div>
             </section>
 
