--- a/chars_book/爆破系.html
+++ b/chars_book/爆破系.html
@@ -68,10 +68,11 @@
       <nav role="navigation">
 
 <ul class="summary">
-<li class="chapter" data-level="1" data-path="index.html"><a href="index.html"><i class="fa fa-check"></i><b>1</b> 前言<span></span></a>
+<li class="chapter" data-level="1" data-path="index.html"><a href="index.html"><i class="fa fa-check"></i><b>1</b> 更新与简介<span></span></a>
 <ul>
 <li class="chapter" data-level="1.1" data-path="index.html"><a href="index.html#更新日志"><i class="fa fa-check"></i><b>1.1</b> 更新日志<span></span></a></li>
 <li class="chapter" data-level="1.2" data-path="index.html"><a href="index.html#更新预告"><i class="fa fa-check"></i><b>1.2</b> 更新预告<span></span></a></li>
+<li class="chapter" data-level="1.3" data-path="index.html"><a href="index.html#前言"><i class="fa fa-check"></i><b>1.3</b> 前言<span></span></a></li>
 </ul></li>
 <li class="chapter" data-level="2" data-path="术语与打法.html"><a href="术语与打法.html"><i class="fa fa-check"></i><b>2</b> 术语与打法<span></span></a>
 <ul>
@@ -161,6 +162,15 @@
 <li class="chapter" data-level="9.6" data-path="饿鲨.html"><a href="饿鲨.html#爆破饿鲨"><i class="fa fa-check"></i><b>9.6</b> 爆破饿鲨<span></span></a></li>
 <li class="chapter" data-level="9.7" data-path="饿鲨.html"><a href="饿鲨.html#s-1000"><i class="fa fa-check"></i><b>9.7</b> S-1000<span></span></a></li>
 </ul></li>
+<li class="chapter" data-level="10" data-path="对战ai策略.html"><a href="对战ai策略.html"><i class="fa fa-check"></i><b>10</b> 对战AI策略<span></span></a>
+<ul>
+<li class="chapter" data-level="10.1" data-path="对战ai策略.html"><a href="对战ai策略.html#战术系-1"><i class="fa fa-check"></i><b>10.1</b> <img src="images/Tactician-small.png" style="height:0.6cm" />战术系<span></span></a></li>
+<li class="chapter" data-level="10.2" data-path="对战ai策略.html"><a href="对战ai策略.html#斗士系-1"><i class="fa fa-check"></i><b>10.2</b> <img src="images/Brawler-small.png" style="height:0.6cm" />斗士系<span></span></a></li>
+<li class="chapter" data-level="10.3" data-path="对战ai策略.html"><a href="对战ai策略.html#战士系-1"><i class="fa fa-check"></i><b>10.3</b> <img src="images/Warrior-small.png" style="height:0.6cm" />战士系<span></span></a></li>
+<li class="chapter" data-level="10.4" data-path="对战ai策略.html"><a href="对战ai策略.html#侦查系-1"><i class="fa fa-check"></i><b>10.4</b> <img src="images/Scout-small.png" style="height:0.6cm" />侦查系<span></span></a></li>
+<li class="chapter" data-level="10.5" data-path="对战ai策略.html"><a href="对战ai策略.html#科技系-1"><i class="fa fa-check"></i><b>10.5</b> <img src="images/Tech-small.png" style="height:0.6cm" />科技系<span></span></a></li>
+<li class="chapter" data-level="10.6" data-path="对战ai策略.html"><a href="对战ai策略.html#爆破系-1"><i class="fa fa-check"></i><b>10.6</b> <img src="images/Demolitions-small.png" style="height:0.6cm" />爆破系<span></span></a></li>
+</ul></li>
 </ul>
 
       </nav>
@@ -220,8 +230,8 @@
 <div id="推荐打法-42" class="section level3 hasAnchor" number="8.1.2">
 <h3><span class="header-section-number">8.1.2</span> 推荐打法<a href="爆破系.html#推荐打法-42" class="anchor-section" aria-label="Anchor link to header"></a></h3>
 <p>连晕打法：在铁皮有将近两格气的时候放S1搏到打晕，点两枪再上去打五拳必然又能获得一个S1，如果初始的气很接近两格，二次晕后还可以再两枪五拳攒到一个S1，初始气不多或者对方快红则补上一发重炮。</p>
-<div id="短战斗-37" class="section level4 hasAnchor" number="8.1.2.1">
-<h4><span class="header-section-number">8.1.2.1</span> 短战斗<a href="爆破系.html#短战斗-37" class="anchor-section" aria-label="Anchor link to header"></a></h4>
+<div id="短战斗-38" class="section level4 hasAnchor" number="8.1.2.1">
+<h4><span class="header-section-number">8.1.2.1</span> 短战斗<a href="爆破系.html#短战斗-38" class="anchor-section" aria-label="Anchor link to header"></a></h4>
 <p>放风筝是铁皮的主旋律，未觉醒的话采用连晕打法基本上可以迅速结束战斗。</p>
 </div>
 <div id="长战斗-38" class="section level4 hasAnchor" number="8.1.2.2">
@@ -274,8 +284,8 @@
 </div>
 <div id="推荐打法-43" class="section level3 hasAnchor" number="8.2.2">
 <h3><span class="header-section-number">8.2.2</span> 推荐打法<a href="爆破系.html#推荐打法-43" class="anchor-section" aria-label="Anchor link to header"></a></h3>
-<div id="短战斗-38" class="section level4 hasAnchor" number="8.2.2.1">
-<h4><span class="header-section-number">8.2.2.1</span> 短战斗<a href="爆破系.html#短战斗-38" class="anchor-section" aria-label="Anchor link to header"></a></h4>
+<div id="短战斗-39" class="section level4 hasAnchor" number="8.2.2.1">
+<h4><span class="header-section-number">8.2.2.1</span> 短战斗<a href="爆破系.html#短战斗-39" class="anchor-section" aria-label="Anchor link to header"></a></h4>
 <p>由于黄蜂点中小枪后有抗性减益，所以在远程牵制中尽量找准空档命中两枪再冲上去打，如对方无规避则主要以S2输出。</p>
 </div>
 <div id="长战斗-39" class="section level4 hasAnchor" number="8.2.2.2">
@@ -318,8 +328,8 @@
 <p>搅拌者的攻击力设计得太低，全游戏垫底，在爆破系比倒数第二的黄蜂还差一大截，普攻差，远程DOT概率才20%比犀牛都低，重击没有额外效果，所有输出全靠S技，如果不靠震荡格挡，要60秒才能达到12层，然后还要看脸出暴击……</p>
 <p>“我觉得我还能在8.0中抢救一下”是搅拌者最真实的心声。</p>
 </div>
-<div id="调整-8" class="section level4 hasAnchor" number="8.3.1.5">
-<h4><span class="header-section-number">8.3.1.5</span> 8.0调整<a href="爆破系.html#调整-8" class="anchor-section" aria-label="Anchor link to header"></a></h4>
+<div id="调整-7" class="section level4 hasAnchor" number="8.3.1.5">
+<h4><span class="header-section-number">8.3.1.5</span> 8.0调整<a href="爆破系.html#调整-7" class="anchor-section" aria-label="Anchor link to header"></a></h4>
 <ul>
 <li>远程攻击触发酸液的概率提升（5阶时有50%的概率）</li>
 <li>酸液时间延长一秒，酸液伤害提升10%</li>
@@ -330,8 +340,8 @@
 </div>
 <div id="推荐打法-44" class="section level3 hasAnchor" number="8.3.2">
 <h3><span class="header-section-number">8.3.2</span> 推荐打法<a href="爆破系.html#推荐打法-44" class="anchor-section" aria-label="Anchor link to header"></a></h3>
-<div id="短战斗-39" class="section level4 hasAnchor" number="8.3.2.1">
-<h4><span class="header-section-number">8.3.2.1</span> 短战斗<a href="爆破系.html#短战斗-39" class="anchor-section" aria-label="Anchor link to header"></a></h4>
+<div id="短战斗-40" class="section level4 hasAnchor" number="8.3.2.1">
+<h4><span class="header-section-number">8.3.2.1</span> 短战斗<a href="爆破系.html#短战斗-40" class="anchor-section" aria-label="Anchor link to header"></a></h4>
 <p>换别人上。</p>
 </div>
 <div id="长战斗-40" class="section level4 hasAnchor" number="8.3.2.2">
@@ -378,8 +388,8 @@
 </div>
 <div id="推荐打法-45" class="section level3 hasAnchor" number="8.4.2">
 <h3><span class="header-section-number">8.4.2</span> 推荐打法<a href="爆破系.html#推荐打法-45" class="anchor-section" aria-label="Anchor link to header"></a></h3>
-<div id="短战斗-40" class="section level4 hasAnchor" number="8.4.2.1">
-<h4><span class="header-section-number">8.4.2.1</span> 短战斗<a href="爆破系.html#短战斗-40" class="anchor-section" aria-label="Anchor link to header"></a></h4>
+<div id="短战斗-41" class="section level4 hasAnchor" number="8.4.2.1">
+<h4><span class="header-section-number">8.4.2.1</span> 短战斗<a href="爆破系.html#短战斗-41" class="anchor-section" aria-label="Anchor link to header"></a></h4>
 <p>近战缠斗，如果对手较弱一个S2差不多解决问题，或者围绕着S1和重炮快速解决战斗。</p>
 </div>
 <div id="长战斗-41" class="section level4 hasAnchor" number="8.4.2.2">
@@ -432,8 +442,8 @@
 </div>
 <div id="推荐打法-46" class="section level3 hasAnchor" number="8.5.2">
 <h3><span class="header-section-number">8.5.2</span> 推荐打法<a href="爆破系.html#推荐打法-46" class="anchor-section" aria-label="Anchor link to header"></a></h3>
-<div id="短战斗-41" class="section level4 hasAnchor" number="8.5.2.1">
-<h4><span class="header-section-number">8.5.2.1</span> 短战斗<a href="爆破系.html#短战斗-41" class="anchor-section" aria-label="Anchor link to header"></a></h4>
+<div id="短战斗-42" class="section level4 hasAnchor" number="8.5.2.1">
+<h4><span class="header-section-number">8.5.2.1</span> 短战斗<a href="爆破系.html#短战斗-42" class="anchor-section" aria-label="Anchor link to header"></a></h4>
 <p>近战缠斗配合四连一撞，先攒两格多气，S2打晕后点五枪再冲上去打五连跟S1，再重击撞晕，快速结束战斗。</p>
 </div>
 <div id="长战斗-42" class="section level4 hasAnchor" number="8.5.2.2">
@@ -478,15 +488,15 @@
 <h4><span class="header-section-number">8.6.1.4</span> 短板<a href="爆破系.html#短板-47" class="anchor-section" aria-label="Anchor link to header"></a></h4>
 <p>惊破天在5.1加强之后直接威胁到了铁皮当时的一哥地位，主要的短板还是来自于操作方式。另外惊破天居然8.0还要加强，很想看看他比喷气机更需要加强的地方在哪。</p>
 </div>
-<div id="调整-9" class="section level4 hasAnchor" number="8.6.1.5">
-<h4><span class="header-section-number">8.6.1.5</span> 8.0调整<a href="爆破系.html#调整-9" class="anchor-section" aria-label="Anchor link to header"></a></h4>
+<div id="调整-8" class="section level4 hasAnchor" number="8.6.1.5">
+<h4><span class="header-section-number">8.6.1.5</span> 8.0调整<a href="爆破系.html#调整-8" class="anchor-section" aria-label="Anchor link to header"></a></h4>
 <p>重击黑暗燃烧的概率从1%调整为1.7%，也就是说，充满30层之后有51%的概率出黑暗燃烧，并且所有黑暗燃烧的强度增加10%。</p>
 </div>
 </div>
 <div id="推荐打法-47" class="section level3 hasAnchor" number="8.6.2">
 <h3><span class="header-section-number">8.6.2</span> 推荐打法<a href="爆破系.html#推荐打法-47" class="anchor-section" aria-label="Anchor link to header"></a></h3>
-<div id="短战斗-42" class="section level4 hasAnchor" number="8.6.2.1">
-<h4><span class="header-section-number">8.6.2.1</span> 短战斗<a href="爆破系.html#短战斗-42" class="anchor-section" aria-label="Anchor link to header"></a></h4>
+<div id="短战斗-43" class="section level4 hasAnchor" number="8.6.2.1">
+<h4><span class="header-section-number">8.6.2.1</span> 短战斗<a href="爆破系.html#短战斗-43" class="anchor-section" aria-label="Anchor link to header"></a></h4>
 <p>先不用着急充能，近战缠斗四连一重配合压起身攒到气之后再充能。输出方式可以是S1搏撞晕后补两发重击，或者直接S2，同战力的敌人一般吃不到第二个S2。</p>
 </div>
 <div id="长战斗-43" class="section level4 hasAnchor" number="8.6.2.2">
@@ -533,16 +543,16 @@
 <h4><span class="header-section-number">8.7.1.4</span> 短板<a href="爆破系.html#短板-48" class="anchor-section" aria-label="Anchor link to header"></a></h4>
 <p>短板？没有。震天尊的能力相当全面，全面到了……官方决定在8.0削弱！</p>
 </div>
-<div id="调整-10" class="section level4 hasAnchor" number="8.7.1.5">
-<h4><span class="header-section-number">8.7.1.5</span> 8.0调整<a href="爆破系.html#调整-10" class="anchor-section" aria-label="Anchor link to header"></a></h4>
+<div id="调整-9" class="section level4 hasAnchor" number="8.7.1.5">
+<h4><span class="header-section-number">8.7.1.5</span> 8.0调整<a href="爆破系.html#调整-9" class="anchor-section" aria-label="Anchor link to header"></a></h4>
 <p>减少砍了2%血和4%攻。总的来说还是没有影响到震天尊的强大。</p>
 </div>
 </div>
 <div id="推荐打法-48" class="section level3 hasAnchor" number="8.7.2">
 <h3><span class="header-section-number">8.7.2</span> 推荐打法<a href="爆破系.html#推荐打法-48" class="anchor-section" aria-label="Anchor link to header"></a></h3>
 <p>由于气来得比较慢，震天尊需要更多的耐心。遗迹的切换使他的S1偷气和S2偷血必须要在遗迹对齐之后才行。这个技巧也称“神力对齐”：上来第一个S1先放掉，接下来，每次获得S2的时候就能偷血。</p>
-<div id="短战斗-43" class="section level4 hasAnchor" number="8.7.2.1">
-<h4><span class="header-section-number">8.7.2.1</span> 短战斗<a href="爆破系.html#短战斗-43" class="anchor-section" aria-label="Anchor link to header"></a></h4>
+<div id="短战斗-44" class="section level4 hasAnchor" number="8.7.2.1">
+<h4><span class="header-section-number">8.7.2.1</span> 短战斗<a href="爆破系.html#短战斗-44" class="anchor-section" aria-label="Anchor link to header"></a></h4>
 <p>上场之后利用狂怒遗迹的加成打四连重击搏命中，用黑暗燃烧迅速削减对手的体力。第一个S1出来后给对方破甲，这样可以弥补切换到保存遗迹时输出的降低。另一种方法是远程放风筝，一路攒到S3带走。</p>
 </div>
 <div id="长战斗-44" class="section level4 hasAnchor" number="8.7.2.2">
@@ -615,8 +625,8 @@
 <p>他的核心技能与热破、路障、录音机类似，都是要通过小枪来施加减益，提升自己的伤害，但是降低格挡熟练度这种鸡肋的能力，难道是要鼓励屈防磨血吗？</p>
 <p>从技能间的配合上来看，很显然是要通过施加大量的玻璃瓦斯，并且用S3给锁成永久的之后，才能把暴击伤害提升上来，然后靠S2来追求输出，但这已经要求攒出5格气了，一般战斗没这么长。同系人物中铁皮攒到两格气，惊破天三格气基本上可以结束战斗了。飞过山在爆破系中难道要跟搅拌者和爆威比比谁更能憋？</p>
 <p>每次增益被驱散时获得远程伤害也是奇葩的设计，这看着像是设计好要对战红蜘蛛，想要放S2前先让对方驱散一下自己的Buff再放？</p>
-<div id="短战斗-44" class="section level4 hasAnchor" number="8.8.2.1">
-<h4><span class="header-section-number">8.8.2.1</span> 短战斗<a href="爆破系.html#短战斗-44" class="anchor-section" aria-label="Anchor link to header"></a></h4>
+<div id="短战斗-45" class="section level4 hasAnchor" number="8.8.2.1">
+<h4><span class="header-section-number">8.8.2.1</span> 短战斗<a href="爆破系.html#短战斗-45" class="anchor-section" aria-label="Anchor link to header"></a></h4>
 </div>
 <div id="长战斗-45" class="section level4 hasAnchor" number="8.8.2.2">
 <h4><span class="header-section-number">8.8.2.2</span> 长战斗<a href="爆破系.html#长战斗-45" class="anchor-section" aria-label="Anchor link to header"></a></h4>
