--- a/chars_book/科技系.html
+++ b/chars_book/科技系.html
@@ -68,10 +68,11 @@
       <nav role="navigation">
 
 <ul class="summary">
-<li class="chapter" data-level="1" data-path="index.html"><a href="index.html"><i class="fa fa-check"></i><b>1</b> 前言<span></span></a>
+<li class="chapter" data-level="1" data-path="index.html"><a href="index.html"><i class="fa fa-check"></i><b>1</b> 更新与简介<span></span></a>
 <ul>
 <li class="chapter" data-level="1.1" data-path="index.html"><a href="index.html#更新日志"><i class="fa fa-check"></i><b>1.1</b> 更新日志<span></span></a></li>
 <li class="chapter" data-level="1.2" data-path="index.html"><a href="index.html#更新预告"><i class="fa fa-check"></i><b>1.2</b> 更新预告<span></span></a></li>
+<li class="chapter" data-level="1.3" data-path="index.html"><a href="index.html#前言"><i class="fa fa-check"></i><b>1.3</b> 前言<span></span></a></li>
 </ul></li>
 <li class="chapter" data-level="2" data-path="术语与打法.html"><a href="术语与打法.html"><i class="fa fa-check"></i><b>2</b> 术语与打法<span></span></a>
 <ul>
@@ -161,6 +162,15 @@
 <li class="chapter" data-level="9.6" data-path="饿鲨.html"><a href="饿鲨.html#爆破饿鲨"><i class="fa fa-check"></i><b>9.6</b> 爆破饿鲨<span></span></a></li>
 <li class="chapter" data-level="9.7" data-path="饿鲨.html"><a href="饿鲨.html#s-1000"><i class="fa fa-check"></i><b>9.7</b> S-1000<span></span></a></li>
 </ul></li>
+<li class="chapter" data-level="10" data-path="对战ai策略.html"><a href="对战ai策略.html"><i class="fa fa-check"></i><b>10</b> 对战AI策略<span></span></a>
+<ul>
+<li class="chapter" data-level="10.1" data-path="对战ai策略.html"><a href="对战ai策略.html#战术系-1"><i class="fa fa-check"></i><b>10.1</b> <img src="images/Tactician-small.png" style="height:0.6cm" />战术系<span></span></a></li>
+<li class="chapter" data-level="10.2" data-path="对战ai策略.html"><a href="对战ai策略.html#斗士系-1"><i class="fa fa-check"></i><b>10.2</b> <img src="images/Brawler-small.png" style="height:0.6cm" />斗士系<span></span></a></li>
+<li class="chapter" data-level="10.3" data-path="对战ai策略.html"><a href="对战ai策略.html#战士系-1"><i class="fa fa-check"></i><b>10.3</b> <img src="images/Warrior-small.png" style="height:0.6cm" />战士系<span></span></a></li>
+<li class="chapter" data-level="10.4" data-path="对战ai策略.html"><a href="对战ai策略.html#侦查系-1"><i class="fa fa-check"></i><b>10.4</b> <img src="images/Scout-small.png" style="height:0.6cm" />侦查系<span></span></a></li>
+<li class="chapter" data-level="10.5" data-path="对战ai策略.html"><a href="对战ai策略.html#科技系-1"><i class="fa fa-check"></i><b>10.5</b> <img src="images/Tech-small.png" style="height:0.6cm" />科技系<span></span></a></li>
+<li class="chapter" data-level="10.6" data-path="对战ai策略.html"><a href="对战ai策略.html#爆破系-1"><i class="fa fa-check"></i><b>10.6</b> <img src="images/Demolitions-small.png" style="height:0.6cm" />爆破系<span></span></a></li>
+</ul></li>
 </ul>
 
       </nav>
@@ -216,11 +226,16 @@
 </div>
 <div id="推荐打法-33" class="section level3 hasAnchor" number="7.1.2">
 <h3><span class="header-section-number">7.1.2</span> 推荐打法<a href="科技系.html#推荐打法-33" class="anchor-section" aria-label="Anchor link to header"></a></h3>
-<div id="长战斗-29" class="section level4 hasAnchor" number="7.1.2.1">
-<h4><span class="header-section-number">7.1.2.1</span> 长战斗<a href="科技系.html#长战斗-29" class="anchor-section" aria-label="Anchor link to header"></a></h4>
-<p>是的，救护车几乎就没有短战斗——或者说50连以下的战斗，除了搏一搏连晕的豪爽，有何必要上救护车？同样打爆破，就算用被克的同战力红蜘蛛也消灭得比救护车更快。</p>
+<div id="短战斗-29" class="section level4 hasAnchor" number="7.1.2.1">
+<h4><span class="header-section-number">7.1.2.1</span> 短战斗<a href="科技系.html#短战斗-29" class="anchor-section" aria-label="Anchor link to header"></a></h4>
+<p>本来之前是说救护车不用上短战斗的，但救护车有一个连晕的能力，如果确定要快速结束战斗的话，只要找机会打出震击，一个S1就可以晕，然后打几个连晕就赢了。</p>
+</div>
+<div id="长战斗-29" class="section level4 hasAnchor" number="7.1.2.2">
+<h4><span class="header-section-number">7.1.2.2</span> 长战斗<a href="科技系.html#长战斗-29" class="anchor-section" aria-label="Anchor link to header"></a></h4>
+<p>救护车的价值就是靠着苟活能力打消耗战，否则50连以下的战斗，同样打爆破，就算用被克的同战力红蜘蛛也消灭得比救护车更快。</p>
 <p>半血以上的时候先靠S3打输出或者连晕搏震击（注意别打红），半血以下找机会重击，对自己相持能力有信心的话，可以等自我诊断差不多回到半血再放S2，这样就能回到超过一半。在血量很危急的时候有S2赶紧放，因为即使裸放，电脑一般都会傻傻冲上来然后被弹开倒地，不会抓S2的空档来欺负你。</p>
-<p>盟战中救护车死了吃一个便宜的单体复活基本就够，这时开场千万不要想当然一个重击，一定要找好机会屈防再搏重击，根据经验，开局电脑防御后面对第一下重击一般都是必中的。重击过后一定要求稳和电脑相持，点枪尽量一枪就跑，由于一次自我诊断的时间长达10秒不能叠加，所以没必要频繁刷新，侧闪反击用打满5连再后闪的方法，不要四连一撞反而被电脑坑了。一般残血开局要一个完整的自我诊断配合途中普攻的能量才能等到S2，放完S2才不会被一枪点死，所以开局需要特别的耐心。当然，如果开局不利被摸死了……就赶紧暂停无耻地杀后台重来，因为是残血，扣一半血又如何？——那你还需要复活药吗……</p>
+<p>盟战中救护车死了吃一个便宜的单体复活基本就够，这时开场千万不要想当然一个重击，一定要找好机会屈防再搏重击，根据经验，开局电脑防御后面对第一下重击一般都是必中的。重击过后一定要求稳和电脑相持，点枪尽量一枪就跑，由于一次自我诊断的时间长达10秒不能叠加，所以没必要频繁刷新，侧闪反击用打满5连再后闪的方法，不要四连一撞反而被电脑坑了。一般残血开局要一个完整的自我诊断配合途中普攻的能量才能等到S2，放完S2才不会被一枪点死，所以开局需要特别的耐心。当然，如果开局不利被摸死了……就赶紧暂停无耻地杀后台重来，因为是残血，扣一半血又如何？</p>
+<p>——那你还需要复活药吗……</p>
 </div>
 </div>
 <div id="基地防守-33" class="section level3 hasAnchor" number="7.1.3">
@@ -236,24 +251,26 @@
 <!--Note-->
 <div id="特点分析-34" class="section level3 hasAnchor" number="7.2.1">
 <h3><span class="header-section-number">7.2.1</span> 特点分析<a href="科技系.html#特点分析-34" class="anchor-section" aria-label="Anchor link to header"></a></h3>
-<p>幻影是游戏头一批机器人，以其复杂有针对性的打法成为科技系最有科技感的人物，前期是高手的宝贝。但是由于对觉醒等级要求较高，在五星时代虽然是第二批入池子的机器人但已逐渐被玩家冷落。</p>
+<p>幻影是游戏头一批机器人，以其复杂有针对性的打法成为科技系最有科技感的人物，前期是高手的宝贝。但是由于对觉醒等级要求较高，且后续科技系人才辈出，在五星时代虽然是第二批入池子的机器人但已逐渐被玩家冷落。</p>
 <div id="能力-34" class="section level4 hasAnchor" number="7.2.1.1">
 <h4><span class="header-section-number">7.2.1.1</span> 能力<a href="科技系.html#能力-34" class="anchor-section" aria-label="Anchor link to header"></a></h4>
 <ul>
 <li>重击可穿过远程攻击，早期重击距离长的时候与风刃一样是很赖皮的机器人，距离削弱后基本上回到了普通水平。重击可净化燃烧，这明显是对标铁皮的。</li>
 <li>幻影开始战斗是能量模式，这时能量功率比正常人多30%，帮助幻影得到特殊技来切换模式。在此模式下，对方使用特殊技的时候会立即激活护盾，护盾对暴击和远程攻击减伤效果特别明显（5阶时减伤90%），所以靠特殊技吃饭的爆破系在幻影身上很难打出伤害，早期幻影也是手残党对付爆威Boss或者突袭中激光爆威的良药。</li>
 <li>幻影的远程小枪100%护甲穿透，这让他的枪命中时跟拳头的伤害有一拼，防御伤害也略高于常人，觉醒后配合S1的射速提升，让幻影在远程战中颇有优势。</li>
-<li>幻影的3个S技各具特色，演化出三种不同的打法，可根据战况灵活切换。</li>
+<li>幻影的3个S技各具特色，演化出三种不同的打法，可根据战况灵活切换。
+<ul>
 <li>S1：发动后进入干扰模式。远程攻击60%的概率减气，由于命中或被防都会减，这让幻影有不错的控气能力。</li>
 <li>S2：发动后进入失能模式。每次近战攻击施加一层长时间减攻（最高15层，5阶的幻影15层可以减攻71.25%，长达20秒，可谓阉割模式），每施加到7层还晕1.5秒，这让幻影可以连打三个近战7连（注意，1.5秒的晕是来不及后撤再开枪的，如果想要，可以考虑把“昏迷”精通升高一些）。三套7连打完肯定又攒到一个S1，S1最后一发如果能搏到减气，就算连晕打红也不怕。另外只要维持在失能模式，减攻过期后又可以接着晕。</li>
-<li>S3：发动后进入灵巧模式。每躲闪对方的攻击会叠加一层15%的永久加攻，最大20层，之后第21层会过期。前期幻影需要很近距离躲闪近战才加攻，后来暗改为任何攻击都可以闪，而且闪避的条件也比探长招牌或者横炮的加气要宽松一些，这让幻影可以有效地弥补自己输出低的不足。</li>
+<li>S3：发动后进入灵巧模式。每躲闪对方的攻击会叠加一层15%的永久加攻，最大20层，之后第21层会过期。前期幻影需要很近距离躲闪近战才加攻，后来暗改为闪避任何攻击都加攻，而且闪避的条件也比探长招牌或者横炮的加气要宽松一些，这让幻影可以有效地弥补自己输出低的不足。</li>
 <li>在上述三个模式中被电脑打中就可能会回到能量模式，失去控气/减攻/堆加攻的能力直到再次发动S技，已获得的加攻不会丢失。</li>
+</ul></li>
 </ul>
 </div>
 <div id="招牌-33" class="section level4 hasAnchor" number="7.2.1.2">
 <h4><span class="header-section-number">7.2.1.2</span> 招牌<a href="科技系.html#招牌-33" class="anchor-section" aria-label="Anchor link to header"></a></h4>
-<p>进一步提升三个S技的效果N秒。S1提射速，S2近战攻击破防，S3加90%攻击。如果只是刚觉醒，时间非常短（5级3.3秒，连S3都只能前两拳获得加成，S2马上前冲追打近战都来不及），觉醒高后才逐步发挥效力。尤其是盟战一厅右路的幻影，觉醒高一个S1出来后长时间小枪追身，非常伤人。
-招牌获益最大的应该是S2，破防性能让幻影可以安逸地打出两连晕和S1收尾。</p>
+<p>进一步提升三个S技的效果N秒。S1提射速，S2近战攻击破防，S3加90%攻击。如果只是刚觉醒，时间非常短（5级3.3秒，连S3都只能前两拳获得加成，S2马上前冲追打近战都来不及），觉醒高后才逐步发挥效力。尤其S1出来后长时间小枪追身，非常伤人。</p>
+<p>招牌获益最大的应该是S2，破防性能让幻影可以安逸地打出两连晕和S1收尾。</p>
 </div>
 <div id="协同-33" class="section level4 hasAnchor" number="7.2.1.3">
 <h4><span class="header-section-number">7.2.1.3</span> 协同<a href="科技系.html#协同-33" class="anchor-section" aria-label="Anchor link to header"></a></h4>
@@ -261,7 +278,7 @@
 </div>
 <div id="短板-34" class="section level4 hasAnchor" number="7.2.1.4">
 <h4><span class="header-section-number">7.2.1.4</span> 短板<a href="科技系.html#短板-34" class="anchor-section" aria-label="Anchor link to header"></a></h4>
-<p>幻影除了基础输出不够和面对非爆破系时身板较脆外，很大问题在于“技多压身”：多变的打法（S1控气，S2暴力输出，S3布局长线）需要更多的思考，也更容易被打断战术部署，另外协同多但管用的少，这些都让幻影逐渐在科技系的竞争中输给救护车犀牛和千斤顶。</p>
+<p>幻影除了基础输出不够和面对非爆破系时身板较脆外，很大问题在于“技多压身”：多变的打法（S1控气，S2暴力输出，S3布局长线）需要更多的思考，也更容易被打断战术部署，另外协同多但管用的少，这些都让幻影逐渐在科技系的竞争中输给救护车、犀牛和千斤顶。</p>
 </div>
 <div id="年8月29调整" class="section level4 hasAnchor" number="7.2.1.5">
 <h4><span class="header-section-number">7.2.1.5</span> 2019年8月29调整<a href="科技系.html#年8月29调整" class="anchor-section" aria-label="Anchor link to header"></a></h4>
@@ -274,9 +291,9 @@
 <div id="推荐打法-34" class="section level3 hasAnchor" number="7.2.2">
 <h3><span class="header-section-number">7.2.2</span> 推荐打法<a href="科技系.html#推荐打法-34" class="anchor-section" aria-label="Anchor link to header"></a></h3>
 <p>未觉醒到10级的幻影除非真没人可用，否则建议雪藏。</p>
-<div id="短战斗-29" class="section level4 hasAnchor" number="7.2.2.1">
-<h4><span class="header-section-number">7.2.2.1</span> 短战斗<a href="科技系.html#短战斗-29" class="anchor-section" aria-label="Anchor link to header"></a></h4>
-<p>上来走近战套路，堆到S2后打连晕，如果一串连晕加S1对方还没死的话，用小枪加骗招把气控住再用标准牵制型打法解决战斗。</p>
+<div id="短战斗-30" class="section level4 hasAnchor" number="7.2.2.1">
+<h4><span class="header-section-number">7.2.2.1</span> 短战斗<a href="科技系.html#短战斗-30" class="anchor-section" aria-label="Anchor link to header"></a></h4>
+<p>上来走近战套路，堆到S2后打连晕，如果一串连晕加S1对方还没死的话，用小枪加骗招把气控住，再用标准牵制型打法解决战斗。</p>
 </div>
 <div id="长战斗-30" class="section level4 hasAnchor" number="7.2.2.2">
 <h4><span class="header-section-number">7.2.2.2</span> 长战斗<a href="科技系.html#长战斗-30" class="anchor-section" aria-label="Anchor link to header"></a></h4>
@@ -325,8 +342,8 @@
 </div>
 <div id="推荐打法-35" class="section level3 hasAnchor" number="7.3.2">
 <h3><span class="header-section-number">7.3.2</span> 推荐打法<a href="科技系.html#推荐打法-35" class="anchor-section" aria-label="Anchor link to header"></a></h3>
-<div id="短战斗-30" class="section level4 hasAnchor" number="7.3.2.1">
-<h4><span class="header-section-number">7.3.2.1</span> 短战斗<a href="科技系.html#短战斗-30" class="anchor-section" aria-label="Anchor link to header"></a></h4>
+<div id="短战斗-31" class="section level4 hasAnchor" number="7.3.2.1">
+<h4><span class="header-section-number">7.3.2.1</span> 短战斗<a href="科技系.html#短战斗-31" class="anchor-section" aria-label="Anchor link to header"></a></h4>
 <p>犀牛典型的短战斗就是用来打气天尊。在天尊狂怒遗迹（黄球）的时候锁能量，并马上前冲压起身，打中的话继续四连一重，循环使用。震天尊起身如果发S技，冲到面前还是来得及侧闪的，要提高警惕。保存遗迹（蓝球）阶段通过流血来增加输出（S2可造成流血，S1驱散对方半血后的勇气精通或者特殊攻击加成造流血）</p>
 </div>
 <div id="长战斗-31" class="section level4 hasAnchor" number="7.3.2.2">
@@ -383,8 +400,8 @@
 </div>
 <div id="推荐打法-36" class="section level3 hasAnchor" number="7.4.2">
 <h3><span class="header-section-number">7.4.2</span> 推荐打法<a href="科技系.html#推荐打法-36" class="anchor-section" aria-label="Anchor link to header"></a></h3>
-<div id="短战斗-31" class="section level4 hasAnchor" number="7.4.2.1">
-<h4><span class="header-section-number">7.4.2.1</span> 短战斗<a href="科技系.html#短战斗-31" class="anchor-section" aria-label="Anchor link to header"></a></h4>
+<div id="短战斗-32" class="section level4 hasAnchor" number="7.4.2.1">
+<h4><span class="header-section-number">7.4.2.1</span> 短战斗<a href="科技系.html#短战斗-32" class="anchor-section" aria-label="Anchor link to header"></a></h4>
 <p>由于普攻不加气，牵制和侧闪反击这种方式在短战斗意义不大，主要围绕重击打，声波的重击命中虽然被削弱了，但依然不低。由于重击后回弹很小，击倒后有时间上的优势可以前冲压起身，在短战斗中经常是将对手压在墙角择，对方起身时也很容易被骗招。S1的晕点可以加以利用，运气好又晕又漏气，声波打几个来回对方差不多了。</p>
 </div>
 <div id="长战斗-32" class="section level4 hasAnchor" number="7.4.2.2">
@@ -450,8 +467,8 @@
 <div id="推荐打法-37" class="section level3 hasAnchor" number="7.5.2">
 <h3><span class="header-section-number">7.5.2</span> 推荐打法<a href="科技系.html#推荐打法-37" class="anchor-section" aria-label="Anchor link to header"></a></h3>
 <p>使用震荡波要吸到充能，并不能完全原地站防不开枪，因为电脑会很聪明地也不开枪，所以要多用一枪骗两枪的方式来勾引对方。但为了吸枪改变走位其实是容易怠误战机的，建议不要刻意吸，而是面对那些天生爱点枪的（天火、惊破天、幻影、阿尔茜）才多吸几发。</p>
-<div id="短战斗-32" class="section level4 hasAnchor" number="7.5.2.1">
-<h4><span class="header-section-number">7.5.2.1</span> 短战斗<a href="科技系.html#短战斗-32" class="anchor-section" aria-label="Anchor link to header"></a></h4>
+<div id="短战斗-33" class="section level4 hasAnchor" number="7.5.2.1">
+<h4><span class="header-section-number">7.5.2.1</span> 短战斗<a href="科技系.html#短战斗-33" class="anchor-section" aria-label="Anchor link to header"></a></h4>
 <p>战斗不长的时候采用压迫式打法，攒到S1就放，可以有效地保障输出和控气，大胆压起身，从而快速解决战斗。</p>
 </div>
 <div id="长战斗-33" class="section level4 hasAnchor" number="7.5.2.2">
@@ -503,8 +520,8 @@
 </div>
 <div id="推荐打法-38" class="section level3 hasAnchor" number="7.6.2">
 <h3><span class="header-section-number">7.6.2</span> 推荐打法<a href="科技系.html#推荐打法-38" class="anchor-section" aria-label="Anchor link to header"></a></h3>
-<div id="短战斗-33" class="section level4 hasAnchor" number="7.6.2.1">
-<h4><span class="header-section-number">7.6.2.1</span> 短战斗<a href="科技系.html#短战斗-33" class="anchor-section" aria-label="Anchor link to header"></a></h4>
+<div id="短战斗-34" class="section level4 hasAnchor" number="7.6.2.1">
+<h4><span class="header-section-number">7.6.2.1</span> 短战斗<a href="科技系.html#短战斗-34" class="anchor-section" aria-label="Anchor link to header"></a></h4>
 <p>不要过度干扰对方，杀入近战区域利用四连一重压起身的打法，用S2来打输出。</p>
 </div>
 <div id="长战斗-34" class="section level4 hasAnchor" number="7.6.2.2">
@@ -555,8 +572,8 @@
 <div id="推荐打法-39" class="section level3 hasAnchor" number="7.7.2">
 <h3><span class="header-section-number">7.7.2</span> 推荐打法<a href="科技系.html#推荐打法-39" class="anchor-section" aria-label="Anchor link to header"></a></h3>
 <p>只讨论觉醒的“纳米千”。</p>
-<div id="短战斗-34" class="section level4 hasAnchor" number="7.7.2.1">
-<h4><span class="header-section-number">7.7.2.1</span> 短战斗<a href="科技系.html#短战斗-34" class="anchor-section" aria-label="Anchor link to header"></a></h4>
+<div id="短战斗-35" class="section level4 hasAnchor" number="7.7.2.1">
+<h4><span class="header-section-number">7.7.2.1</span> 短战斗<a href="科技系.html#短战斗-35" class="anchor-section" aria-label="Anchor link to header"></a></h4>
 <p>先找机会堆到三层升级。注意一次重击回来要稍等一会才能完成升级，所以如果重击命中的话，回来点两枪，如果对方没有侧闪就压过去打一套或者屈防四下，再重击。完成三层后再用S1或S2打输出，因为3个S技的震/漏/晕完全是相同参数的（并且震击概率本来就特别高），所以如果攻击升级有两个或者更多，就S2放大伤害，不到两个就多用S1打控制。短战斗基本不要考虑回血，纳米顶住了大部分伤害。</p>
 </div>
 <div id="长战斗-35" class="section level4 hasAnchor" number="7.7.2.2">
@@ -617,15 +634,15 @@
 </ul>
 <p>天火毫无意外地进入了8.0平衡性调整的名单，一同会调整的还有护盾大师协同，但愿能重现曙光。</p>
 </div>
-<div id="调整-7" class="section level4 hasAnchor" number="7.8.1.5">
-<h4><span class="header-section-number">7.8.1.5</span> 8.0调整<a href="科技系.html#调整-7" class="anchor-section" aria-label="Anchor link to header"></a></h4>
+<div id="调整-6" class="section level4 hasAnchor" number="7.8.1.5">
+<h4><span class="header-section-number">7.8.1.5</span> 8.0调整<a href="科技系.html#调整-6" class="anchor-section" aria-label="Anchor link to header"></a></h4>
 <p>史诗级加强，他把红蜘蛛的协同收入自己的基本技能了，也就是不要红蜘蛛组队也能近战把人架晕（不再架晕特殊技，眩晕时间缩短为1秒），概率100%！有红蜘蛛的话眩晕时间加50%。架近战S技时护盾特效依然会有，但是不能把S技给架晕，也不能打断对方的动作。</p>
 </div>
 </div>
 <div id="推荐打法-40" class="section level3 hasAnchor" number="7.8.2">
 <h3><span class="header-section-number">7.8.2</span> 推荐打法<a href="科技系.html#推荐打法-40" class="anchor-section" aria-label="Anchor link to header"></a></h3>
-<div id="短战斗-35" class="section level4 hasAnchor" number="7.8.2.1">
-<h4><span class="header-section-number">7.8.2.1</span> 短战斗<a href="科技系.html#短战斗-35" class="anchor-section" aria-label="Anchor link to header"></a></h4>
+<div id="短战斗-36" class="section level4 hasAnchor" number="7.8.2.1">
+<h4><span class="header-section-number">7.8.2.1</span> 短战斗<a href="科技系.html#短战斗-36" class="anchor-section" aria-label="Anchor link to header"></a></h4>
 <p><del>由于近战招架的风险回报比太高，主要还是靠远程牵制反弹子弹来攒充能，然后要么随时用重击还给对手，要么攒到S3再放。</del>
 经过8.0的加强，天火也成为了一流的科技人物。由于五连后原地站防电脑往往会近战打回头，结果就是当场晕住，于是天火又可以五连站防。如果电脑不打回头，那无非是侧闪（抓住再来五下）或者大招（躲掉接着打）,总之注意不要打红就好。如此几次，短战斗也差不多结束了。碰到不喜欢近战的角色，那就在远处反弹子弹并且用重击还DOT给对手。</p>
 </div>
@@ -689,8 +706,8 @@
 </div>
 <div id="推荐打法-41" class="section level3 hasAnchor" number="7.9.2">
 <h3><span class="header-section-number">7.9.2</span> 推荐打法<a href="科技系.html#推荐打法-41" class="anchor-section" aria-label="Anchor link to header"></a></h3>
-<div id="短战斗-36" class="section level4 hasAnchor" number="7.9.2.1">
-<h4><span class="header-section-number">7.9.2.1</span> 短战斗<a href="科技系.html#短战斗-36" class="anchor-section" aria-label="Anchor link to header"></a></h4>
+<div id="短战斗-37" class="section level4 hasAnchor" number="7.9.2.1">
+<h4><span class="header-section-number">7.9.2.1</span> 短战斗<a href="科技系.html#短战斗-37" class="anchor-section" aria-label="Anchor link to header"></a></h4>
 <p>近战为主，反复围绕S1的能量锁定打出侵略性，对方能量上不来可以连续压制。</p>
 </div>
 <div id="长战斗-37" class="section level4 hasAnchor" number="7.9.2.2">
