--- a/chars_book/404.html
+++ b/chars_book/404.html
@@ -68,10 +68,11 @@
       <nav role="navigation">
 
 <ul class="summary">
-<li class="chapter" data-level="1" data-path="index.html"><a href="index.html"><i class="fa fa-check"></i><b>1</b> 前言<span></span></a>
+<li class="chapter" data-level="1" data-path="index.html"><a href="index.html"><i class="fa fa-check"></i><b>1</b> 更新与简介<span></span></a>
 <ul>
 <li class="chapter" data-level="1.1" data-path="index.html"><a href="index.html#更新日志"><i class="fa fa-check"></i><b>1.1</b> 更新日志<span></span></a></li>
 <li class="chapter" data-level="1.2" data-path="index.html"><a href="index.html#更新预告"><i class="fa fa-check"></i><b>1.2</b> 更新预告<span></span></a></li>
+<li class="chapter" data-level="1.3" data-path="index.html"><a href="index.html#前言"><i class="fa fa-check"></i><b>1.3</b> 前言<span></span></a></li>
 </ul></li>
 <li class="chapter" data-level="2" data-path="术语与打法.html"><a href="术语与打法.html"><i class="fa fa-check"></i><b>2</b> 术语与打法<span></span></a>
 <ul>
@@ -160,6 +161,15 @@
 <li class="chapter" data-level="9.5" data-path="饿鲨.html"><a href="饿鲨.html#科技饿鲨"><i class="fa fa-check"></i><b>9.5</b> 科技饿鲨<span></span></a></li>
 <li class="chapter" data-level="9.6" data-path="饿鲨.html"><a href="饿鲨.html#爆破饿鲨"><i class="fa fa-check"></i><b>9.6</b> 爆破饿鲨<span></span></a></li>
 <li class="chapter" data-level="9.7" data-path="饿鲨.html"><a href="饿鲨.html#s-1000"><i class="fa fa-check"></i><b>9.7</b> S-1000<span></span></a></li>
+</ul></li>
+<li class="chapter" data-level="10" data-path="对战ai策略.html"><a href="对战ai策略.html"><i class="fa fa-check"></i><b>10</b> 对战AI策略<span></span></a>
+<ul>
+<li class="chapter" data-level="10.1" data-path="对战ai策略.html"><a href="对战ai策略.html#战术系-1"><i class="fa fa-check"></i><b>10.1</b> <img src="images/Tactician-small.png" style="height:0.6cm" />战术系<span></span></a></li>
+<li class="chapter" data-level="10.2" data-path="对战ai策略.html"><a href="对战ai策略.html#斗士系-1"><i class="fa fa-check"></i><b>10.2</b> <img src="images/Brawler-small.png" style="height:0.6cm" />斗士系<span></span></a></li>
+<li class="chapter" data-level="10.3" data-path="对战ai策略.html"><a href="对战ai策略.html#战士系-1"><i class="fa fa-check"></i><b>10.3</b> <img src="images/Warrior-small.png" style="height:0.6cm" />战士系<span></span></a></li>
+<li class="chapter" data-level="10.4" data-path="对战ai策略.html"><a href="对战ai策略.html#侦查系-1"><i class="fa fa-check"></i><b>10.4</b> <img src="images/Scout-small.png" style="height:0.6cm" />侦查系<span></span></a></li>
+<li class="chapter" data-level="10.5" data-path="对战ai策略.html"><a href="对战ai策略.html#科技系-1"><i class="fa fa-check"></i><b>10.5</b> <img src="images/Tech-small.png" style="height:0.6cm" />科技系<span></span></a></li>
+<li class="chapter" data-level="10.6" data-path="对战ai策略.html"><a href="对战ai策略.html#爆破系-1"><i class="fa fa-check"></i><b>10.6</b> <img src="images/Demolitions-small.png" style="height:0.6cm" />爆破系<span></span></a></li>
 </ul></li>
 </ul>
 
