--- a/chars_book/index.html
+++ b/chars_book/index.html
@@ -68,10 +68,11 @@
       <nav role="navigation">
 
 <ul class="summary">
-<li class="chapter" data-level="1" data-path="index.html"><a href="index.html"><i class="fa fa-check"></i><b>1</b> 前言<span></span></a>
+<li class="chapter" data-level="1" data-path="index.html"><a href="index.html"><i class="fa fa-check"></i><b>1</b> 更新与简介<span></span></a>
 <ul>
 <li class="chapter" data-level="1.1" data-path="index.html"><a href="index.html#更新日志"><i class="fa fa-check"></i><b>1.1</b> 更新日志<span></span></a></li>
 <li class="chapter" data-level="1.2" data-path="index.html"><a href="index.html#更新预告"><i class="fa fa-check"></i><b>1.2</b> 更新预告<span></span></a></li>
+<li class="chapter" data-level="1.3" data-path="index.html"><a href="index.html#前言"><i class="fa fa-check"></i><b>1.3</b> 前言<span></span></a></li>
 </ul></li>
 <li class="chapter" data-level="2" data-path="术语与打法.html"><a href="术语与打法.html"><i class="fa fa-check"></i><b>2</b> 术语与打法<span></span></a>
 <ul>
@@ -161,6 +162,15 @@
 <li class="chapter" data-level="9.6" data-path="饿鲨.html"><a href="饿鲨.html#爆破饿鲨"><i class="fa fa-check"></i><b>9.6</b> 爆破饿鲨<span></span></a></li>
 <li class="chapter" data-level="9.7" data-path="饿鲨.html"><a href="饿鲨.html#s-1000"><i class="fa fa-check"></i><b>9.7</b> S-1000<span></span></a></li>
 </ul></li>
+<li class="chapter" data-level="10" data-path="对战ai策略.html"><a href="对战ai策略.html"><i class="fa fa-check"></i><b>10</b> 对战AI策略<span></span></a>
+<ul>
+<li class="chapter" data-level="10.1" data-path="对战ai策略.html"><a href="对战ai策略.html#战术系-1"><i class="fa fa-check"></i><b>10.1</b> <img src="images/Tactician-small.png" style="height:0.6cm" />战术系<span></span></a></li>
+<li class="chapter" data-level="10.2" data-path="对战ai策略.html"><a href="对战ai策略.html#斗士系-1"><i class="fa fa-check"></i><b>10.2</b> <img src="images/Brawler-small.png" style="height:0.6cm" />斗士系<span></span></a></li>
+<li class="chapter" data-level="10.3" data-path="对战ai策略.html"><a href="对战ai策略.html#战士系-1"><i class="fa fa-check"></i><b>10.3</b> <img src="images/Warrior-small.png" style="height:0.6cm" />战士系<span></span></a></li>
+<li class="chapter" data-level="10.4" data-path="对战ai策略.html"><a href="对战ai策略.html#侦查系-1"><i class="fa fa-check"></i><b>10.4</b> <img src="images/Scout-small.png" style="height:0.6cm" />侦查系<span></span></a></li>
+<li class="chapter" data-level="10.5" data-path="对战ai策略.html"><a href="对战ai策略.html#科技系-1"><i class="fa fa-check"></i><b>10.5</b> <img src="images/Tech-small.png" style="height:0.6cm" />科技系<span></span></a></li>
+<li class="chapter" data-level="10.6" data-path="对战ai策略.html"><a href="对战ai策略.html#爆破系-1"><i class="fa fa-check"></i><b>10.6</b> <img src="images/Demolitions-small.png" style="height:0.6cm" />爆破系<span></span></a></li>
+</ul></li>
 </ul>
 
       </nav>
@@ -181,27 +191,35 @@
 <div id="header">
 <h1 class="title">百炼为战全人物解析</h1>
 <p class="author"><em>公理天城翻译官</em></p>
-<p class="date"><em>更新时间：2022-04-12</em></p>
+<p class="date"><em>更新时间：2022-04-18</em></p>
 </div>
-<div id="前言" class="section level1 hasAnchor" number="1">
-<h1><span class="header-section-number">1</span> 前言<a href="index.html#前言" class="anchor-section" aria-label="Anchor link to header"></a></h1>
-<p>《变形金刚：百炼为战》（Transformers: Forged to Fight）是一款以变形金刚为主题的格斗类手游，由Kabam公司开发，2017年4月正式上线。游戏采用了来自多个脉系的变形金刚进行格斗对战，战斗模式为一对一（玩家对电脑AI），没有玩家间实时对战的功能。</p>
-<p>《百炼为战》在画面、人物形象、游戏模式与动作设计方面均让人眼前一亮，尤其在变形金刚这个IP的游戏中属于佼佼者。但游戏对系统要求高，频繁的卡顿与bug一直困扰并限制着新玩家入坑。运营思路的缺乏也让这个游戏始终只拥有十分小众的玩家群体。</p>
-<p>作为游戏的铁杆粉丝，我在游戏公测时入坑，一直玩到今天，经历了游戏中的各种变化，对这个游戏的感情很深。于是在这个游戏走到晚期，角色稳定下来之后，结合自己对角色的使用的理解，写下了这篇《全人物解析》。</p>
-<p>以下的内容均来自本人使用过程中的经验和与玩家群体交流的心得，感谢所有玩家对这个游戏和我本人的帮助。文中内容乃一家之言，供交流学习用，如有批评指正，欢迎来信： <a href="mailto:kmc.best@qq.com" class="email">kmc.best@qq.com</a></p>
-<p><strong>本人主号于2021年2月底弃用，之后零星地给网友带带号，跟进了解游戏的进展，并对本文做持续更新。</strong></p>
+<div id="更新与简介" class="section level1 hasAnchor" number="1">
+<h1><span class="header-section-number">1</span> 更新与简介<a href="index.html#更新与简介" class="anchor-section" aria-label="Anchor link to header"></a></h1>
 <div id="更新日志" class="section level2 hasAnchor" number="1.1">
 <h2><span class="header-section-number">1.1</span> 更新日志<a href="index.html#更新日志" class="anchor-section" aria-label="Anchor link to header"></a></h2>
 <ul>
-<li>2022年4月12日：G1铁皮解析，修复能力雷达图刻度错误。</li>
+<li>2022年4月18日：
+<ul>
+<li>新增<a href="对战ai策略.html#对战ai策略">对战AI策略</a>章节，分析所有角色电脑AI应对策略，包括所有S1、S2闪避方式。</li>
+<li>重写<a href="战士系.html#探长">探长</a>玩法；修订<a href="科技系.html#天火">天火</a>，<a href="侦查系.html#黄豹">黄豹</a>，<a href="战士系.html#巨蝎勇士">巨蝎勇士</a>，<a href="斗士系.html#汽车大师">汽车大师</a>，<a href="斗士系.html#g1铁皮">G1铁皮</a></li>
+</ul></li>
+<li>2022年4月12日：<a href="斗士系.html#g1铁皮">G1铁皮解析</a>，修复能力雷达图刻度错误。</li>
 <li>2022年4月6日：挽歌、闹翻天解析。</li>
 </ul>
 </div>
 <div id="更新预告" class="section level2 hasAnchor" number="1.2">
 <h2><span class="header-section-number">1.2</span> 更新预告<a href="index.html#更新预告" class="anchor-section" aria-label="Anchor link to header"></a></h2>
 <ul>
-<li>2022年4月：加入专门章节分析所有角色电脑AI应对策略，包括所有S1、S2闪避方式</li>
+<li>2022年4月：修正一些写得比较简略的早期角色。更新一些后续调整过的角色如阿尔茜、路障、天火。</li>
 </ul>
+</div>
+<div id="前言" class="section level2 hasAnchor" number="1.3">
+<h2><span class="header-section-number">1.3</span> 前言<a href="index.html#前言" class="anchor-section" aria-label="Anchor link to header"></a></h2>
+<p>《变形金刚：百炼为战》（Transformers: Forged to Fight）是一款以变形金刚为主题的格斗类手游，由Kabam公司开发，2017年4月正式上线。游戏采用了来自多个脉系的变形金刚进行格斗对战，战斗模式为一对一（玩家对电脑AI），没有玩家间实时对战的功能。</p>
+<p>《百炼为战》在画面、人物形象、游戏模式与动作设计方面均让人眼前一亮，尤其在变形金刚这个IP的游戏中属于佼佼者。但游戏对系统要求高，频繁的卡顿与bug一直困扰并限制着新玩家入坑。运营思路的缺乏也让这个游戏始终只拥有十分小众的玩家群体。</p>
+<p>作为游戏的铁杆粉丝，我在游戏公测时入坑，一直玩到今天，经历了游戏中的各种变化，对这个游戏的感情很深。于是在这个游戏走到晚期，角色稳定下来之后，结合自己对角色的使用的理解，写下了这篇《全人物解析》。</p>
+<p>以下的内容均来自本人使用过程中的经验和与玩家群体交流的心得，感谢所有玩家对这个游戏和我本人的帮助。文中内容乃一家之言，供交流学习用，如有批评指正，欢迎来信： <a href="mailto:kmc.best@qq.com" class="email">kmc.best@qq.com</a></p>
+<p><strong>本人主号于2021年2月底弃用，之后零星地给网友带带号，跟进了解游戏的进展，并对本文做持续更新。</strong></p>
 
 </div>
 </div>
