--- a/chars_book/侦查系.html
+++ b/chars_book/侦查系.html
@@ -68,10 +68,11 @@
       <nav role="navigation">
 
 <ul class="summary">
-<li class="chapter" data-level="1" data-path="index.html"><a href="index.html"><i class="fa fa-check"></i><b>1</b> 前言<span></span></a>
+<li class="chapter" data-level="1" data-path="index.html"><a href="index.html"><i class="fa fa-check"></i><b>1</b> 更新与简介<span></span></a>
 <ul>
 <li class="chapter" data-level="1.1" data-path="index.html"><a href="index.html#更新日志"><i class="fa fa-check"></i><b>1.1</b> 更新日志<span></span></a></li>
 <li class="chapter" data-level="1.2" data-path="index.html"><a href="index.html#更新预告"><i class="fa fa-check"></i><b>1.2</b> 更新预告<span></span></a></li>
+<li class="chapter" data-level="1.3" data-path="index.html"><a href="index.html#前言"><i class="fa fa-check"></i><b>1.3</b> 前言<span></span></a></li>
 </ul></li>
 <li class="chapter" data-level="2" data-path="术语与打法.html"><a href="术语与打法.html"><i class="fa fa-check"></i><b>2</b> 术语与打法<span></span></a>
 <ul>
@@ -160,6 +161,15 @@
 <li class="chapter" data-level="9.5" data-path="饿鲨.html"><a href="饿鲨.html#科技饿鲨"><i class="fa fa-check"></i><b>9.5</b> 科技饿鲨<span></span></a></li>
 <li class="chapter" data-level="9.6" data-path="饿鲨.html"><a href="饿鲨.html#爆破饿鲨"><i class="fa fa-check"></i><b>9.6</b> 爆破饿鲨<span></span></a></li>
 <li class="chapter" data-level="9.7" data-path="饿鲨.html"><a href="饿鲨.html#s-1000"><i class="fa fa-check"></i><b>9.7</b> S-1000<span></span></a></li>
+</ul></li>
+<li class="chapter" data-level="10" data-path="对战ai策略.html"><a href="对战ai策略.html"><i class="fa fa-check"></i><b>10</b> 对战AI策略<span></span></a>
+<ul>
+<li class="chapter" data-level="10.1" data-path="对战ai策略.html"><a href="对战ai策略.html#战术系-1"><i class="fa fa-check"></i><b>10.1</b> <img src="images/Tactician-small.png" style="height:0.6cm" />战术系<span></span></a></li>
+<li class="chapter" data-level="10.2" data-path="对战ai策略.html"><a href="对战ai策略.html#斗士系-1"><i class="fa fa-check"></i><b>10.2</b> <img src="images/Brawler-small.png" style="height:0.6cm" />斗士系<span></span></a></li>
+<li class="chapter" data-level="10.3" data-path="对战ai策略.html"><a href="对战ai策略.html#战士系-1"><i class="fa fa-check"></i><b>10.3</b> <img src="images/Warrior-small.png" style="height:0.6cm" />战士系<span></span></a></li>
+<li class="chapter" data-level="10.4" data-path="对战ai策略.html"><a href="对战ai策略.html#侦查系-1"><i class="fa fa-check"></i><b>10.4</b> <img src="images/Scout-small.png" style="height:0.6cm" />侦查系<span></span></a></li>
+<li class="chapter" data-level="10.5" data-path="对战ai策略.html"><a href="对战ai策略.html#科技系-1"><i class="fa fa-check"></i><b>10.5</b> <img src="images/Tech-small.png" style="height:0.6cm" />科技系<span></span></a></li>
+<li class="chapter" data-level="10.6" data-path="对战ai策略.html"><a href="对战ai策略.html#爆破系-1"><i class="fa fa-check"></i><b>10.6</b> <img src="images/Demolitions-small.png" style="height:0.6cm" />爆破系<span></span></a></li>
 </ul></li>
 </ul>
 
@@ -325,8 +335,8 @@
 <h4><span class="header-section-number">6.3.1.4</span> 短板<a href="侦查系.html#短板-27" class="anchor-section" aria-label="Anchor link to header"></a></h4>
 <p>横炮整体看上去没有太大问题，DOT和控气上稍有欠缺，但输出能力了得也是一种弥补。总体来说人气实在太低，也进入了8.0要加强的列表，期待曙光。</p>
 </div>
-<div id="调整-5" class="section level4 hasAnchor" number="6.3.1.5">
-<h4><span class="header-section-number">6.3.1.5</span> 8.0调整<a href="侦查系.html#调整-5" class="anchor-section" aria-label="Anchor link to header"></a></h4>
+<div id="调整-4" class="section level4 hasAnchor" number="6.3.1.5">
+<h4><span class="header-section-number">6.3.1.5</span> 8.0调整<a href="侦查系.html#调整-4" class="anchor-section" aria-label="Anchor link to header"></a></h4>
 <p>基础暴击率+3.6%，基础暴击伤害+10%，S2的导弹100%施加燃烧。</p>
 </div>
 <div id="年8月调整-1" class="section level4 hasAnchor" number="6.3.1.6">
@@ -499,8 +509,8 @@
 <p>很多玩家和本人都感觉反冲的移动速度略慢、操作手感粘滞。重击的后空翻破绽和犀牛一样大，对手后闪掉可以直接出近战把他从天上“抓”下来。另外飞镖算物理攻击也让他在对付通天晓的时候比较苦手。做为血量排名全人物倒数第二的角色，用来保命的规避只在前冲扑空时会触发。</p>
 <p>其实反冲很根本的问题还在于输出/控气/续航三种因素都和能量流失挂钩，打法费脑，容易顾此失彼。反冲可能更适合战略部署或者突袭中对抗机器人资源和科技控制台。不过由于8.0预计要加强反冲，所以后续是否翻身，还有待检验。</p>
 </div>
-<div id="调整-6" class="section level4 hasAnchor" number="6.6.1.5">
-<h4><span class="header-section-number">6.6.1.5</span> 8.0调整<a href="侦查系.html#调整-6" class="anchor-section" aria-label="Anchor link to header"></a></h4>
+<div id="调整-5" class="section level4 hasAnchor" number="6.6.1.5">
+<h4><span class="header-section-number">6.6.1.5</span> 8.0调整<a href="侦查系.html#调整-5" class="anchor-section" aria-label="Anchor link to header"></a></h4>
 <p>S2的翅膀攻击增加施加流血的特点（能量流失能力也保留）。提升基础暴击率和暴击伤害。让反冲实力倍增。</p>
 </div>
 </div>
@@ -546,11 +556,23 @@
 </div>
 <div id="招牌-30" class="section level4 hasAnchor" number="6.7.1.2">
 <h4><span class="header-section-number">6.7.1.2</span> 招牌<a href="侦查系.html#招牌-30" class="anchor-section" aria-label="Anchor link to header"></a></h4>
-<p>这是一个面面俱到的神奇招牌：首先是阻止对方触发能力，虽然并不能阻止黄蜂的复活和震天尊的白球，但是游戏中大部分能力都是可以阻止的，所以黄豹抢在声波之前满一格气，声波连护盾都出不来。其次是招牌过程中打穿对手所有减伤，让犀牛和幻影面对黄豹的S技毫无办法，猩猩引以为傲的抗暴护甲也无能为力。然后是概率规避，让黄豹有招牌的时候可以更加莽撞。而且前面三个特性是与觉醒等级无关，觉醒高只是增加一些暴击率。所以几乎只要觉醒一次，就把黄豹隐藏的能力彻底解锁。对于黄豹来说，出招牌意味着S技也到了，由于招牌打穿对方一切减伤手段并封锁一切技能，这时的S技打在对方身上是相当的疼，并且对方不可能规避掉。</p>
+<p>这是一个面面俱到的神奇招牌：</p>
+<ul>
+<li>首先是阻止对方触发能力<strong>的效果</strong>。具体说是能力会触发，但是不起效果。比如黄豹抢在声波之前满一格气，声波有护盾也不能反弹子弹。不能阻止黄蜂的复活，但是复活中不会回血。震天尊的白球是不能阻止他无敌的。其他大部分能力如回血、DOT都是可以阻止的。</li>
+<li>其次是招牌过程中打穿对手所有减伤，之前写的是护甲、护盾，但不知道何时改成了只有护甲。总之猩猩引以为傲的抗暴护甲，黄豹一个S2就能保证输出。</li>
+<li>招牌有效期内黄豹的攻击不会被规避，所以连接S技是非常稳的。</li>
+<li>招牌有效期内黄豹自己有概率规避，让黄豹有招牌的时候可以更加莽撞。</li>
+<li>这前面几个特性是与觉醒等级无关，觉醒等级只是影响暴击率（10~40%）。所以几乎只要觉醒一次，就把黄豹隐藏的能力彻底解锁。</li>
+</ul>
+<p>但是注意，招牌有效期就4秒，并不是很长。</p>
 </div>
 <div id="协同-30" class="section level4 hasAnchor" number="6.7.1.3">
 <h4><span class="header-section-number">6.7.1.3</span> 协同<a href="侦查系.html#协同-30" class="anchor-section" aria-label="Anchor link to header"></a></h4>
-<p>黄豹单兵能力已经超强，再加上野兽净化的能力，连碎骨魔也照样敢打。</p>
+<ul>
+<li>野兽净化：黄豹单兵能力已经超强，再加上野兽净化的能力，连碎骨魔也照样敢打。</li>
+<li>野兽人物（相互）：黄蜂和巨蝎加攻，猩猩、犀牛和恐龙勇士加护甲。</li>
+<li>横炮、幻影、大黄蜂（相互）：躲避敌人进攻时加攻，5星人物间能加到40%倒是很可观的。</li>
+</ul>
 </div>
 <div id="短板-31" class="section level4 hasAnchor" number="6.7.1.4">
 <h4><span class="header-section-number">6.7.1.4</span> 短板<a href="侦查系.html#短板-31" class="anchor-section" aria-label="Anchor link to header"></a></h4>
